--- a/_posts/Resume/recent/2024-01-11-24년이력서.md
+++ b/_posts/Resume/recent/2024-01-11-24년이력서.md
@@ -107,7 +107,7 @@
 
 # 기타
     - 2023.10.07 빅데이터분석기사 필기 (한국데이터산업진흥원)❌
-    - 2022.07.24 ~ 2024.04.30(현재) 자격증 오픈채팅방 및 스터디 운영
+    - 2022.07.24 ~ 2024.04.30 자격증 오픈채팅방 및 스터디 운영
         네이버 카페, 수제비에서 정보처리기사 실기를 준비할 8명 인원을 구해 오픈채팅방 개설을 시작으로, 현재는 부방장으로 정보처리기사 및 다른 IT 자격증에 대한 정보를 공유하는 카카오톡 오픈채팅방 운영 중입니다.
         - 2023.08.26 ~ 2023.10.06 빅데이터분석기사 스터디 운영
             네이버 카페, 데이터전문가포럼에서 스터디 원을 구해 스터디장으로 한달 간, 이기적 책을 기반으로 스터디를 운영했습니다.
@@ -145,7 +145,7 @@
         - 2021.06.28 ~ 2021.07.09 프로그래밍 기초(Python) 계절학기 비대면 수업 도우미
         - 2020.10.20 ~ 2020.12.15 IOT-인공지능-빅데이터 수업 도우미
 
-    - 2021.03.02 ~ 2021.12.21 한국공학대학교(한국산업기술대학교) 21년도 1~2학기 신입생 상담 도우미(봉사장학)
+    - 2021.03.02 ~ 2021.12.21   
         신입생들의 자퇴를 막기 위해, 주기적으로 학생들과 담당 교수님들 사이에서 상담 일정을 조정해주고, 대화하며 보통 진로에 대한 고민을 들어주는 역할.
 
     - 2020.10.01 ~ 2021.03.01 한국공학대학교(한국산업기술대학교) 프로젝트 교직원, 근로 학생
@@ -174,7 +174,7 @@
 
 
 # 취미/특기 그리고 가치관
-- 자격증 공부, 신기술 및 최근 뉴스 찾아보기
+- 자격증 공부, 신기술 및 최근 뉴스 찾아보는 것입니다.
 - 궁금한 부분이 있으면 간단하게 실습해보는 것이 특기입니다.
 
 ## 23년 하반기
