--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -215,38 +215,39 @@
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
 |71|155|2024 07 02|[엠게임](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44609800?Oem_Code=C1) ||웹개발자|📤 서류제출|||
 |72|156|2024 06 10|[누리플러스](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44604410?Oem_Code=C1) ||소프트웨어 개발|📤 서류제출|||
-|73|157||[SK 쉴더스](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44604137?Oem_Code=C1) ||프론트엔드 경력 2년||||
+|||2024 05 05|[아시아나IDT](https://asianaidt.recruiter.co.kr/appsite/company/index) ||시스템 운영, 경력2년|❌ 미지원|||
+|||2024 05 05|[투비소프트](https://www.jobkorea.co.kr/Recruit/GI_Read/44395286?Oem_Code=C1&sc=15) ||이커머스|❌ 미지원|||
+|||2024 05 05|[현대자동차 GIT](https://www.jobkorea.co.kr/Recruit/GI_Read/44531120?Oem_Code=C1&sc=7) |||❌ 미지원|||
 
 
 
+ |73|157|2024 05 09|[SK 쉴더스](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44604137?Oem_Code=C1) ||프론트엔드 경력 2년||||
 
 
 
-
-
-
+|||2024 05 06|[이지케어택](https://ezcaretech.career.greetinghr.com/o/109146) ||의료IT|📤 서류제출|||
+||||[도미노피자](https://www.jobkorea.co.kr/Recruit/GI_Read/44300917?GI_No=46633416) |||❌ 미지원| 경력 3~5년||
 
 |||2024 05 06|[하나펀드서비스](https://www.jobkorea.co.kr/Recruit/GI_Read/44524415?Oem_Code=C1&sc=7) ||||||
 
-|||2024 05 05|[현대자동차 GIT](https://www.jobkorea.co.kr/Recruit/GI_Read/44531120?Oem_Code=C1&sc=7) ||||||
+|||2024 05 06|[경동나비엔](https://recruit.kdfamily.co.kr/) ||R&D IOT 서버 백엔드, 구로||||
+|||2024 05 06|[이랜드 이노플](https://careers.eland.co.kr/announce/recruit/hxCcG2wOtfklvYj5Zmea5XtMDw8P) ||외식 시스템 개발 및 운영||||
 
-|||2024 05 16|[케이뱅크](https://inthiswork.com/archives/118787) ||프론트엔드||||
+
+|||2024 05 06|[슈피겐 코리아](https://career.spigenkorea.co.kr/) ||웹개발||||
+
+
 
 |||상시|[카페24](https://www.jobkorea.co.kr/Recruit/GI_Read/44457247?Oem_Code=C1&sc=15) ||||||
 
-|||2024 05 06|[아시아나IDT](https://asianaidt.recruiter.co.kr/appsite/company/index) ||시스템 운영, 경력2년||||
 
-|||2024 05 05|[투비소프트](https://www.jobkorea.co.kr/Recruit/GI_Read/44395286?Oem_Code=C1&sc=15) ||이커머스||||
-|||2024 05 06|[경동나비엔](https://recruit.kdfamily.co.kr/) ||R&D IOT 서버 백엔드, 구로||||
 
-|||2024 05 06|[이랜드 이노플](https://careers.eland.co.kr/announce/recruit/hxCcG2wOtfklvYj5Zmea5XtMDw8P) ||외식 시스템 개발 및 운영||||
-
-|||2024 05 06|[이지케어택](https://ezcaretech.career.greetinghr.com/o/109146) ||||||
-|||2024 05 06|[슈피겐 코리아](https://career.spigenkorea.co.kr/) ||웹개발||||
-
-|||2024 05 07|[한국예탁결제원](https://ksd.saramin.co.kr/service/ksd/3136/applicant/apply/recruit_default.asp) ||IT||||
 |||2024 05 07|[NH투자증권](https://nhqv-recruit2024.com/?utm_source=jas01&utm_campaign=nh2024up) ||||||
+|||2024 05 07|[한국예탁결제원](https://ksd.saramin.co.kr/service/ksd/3136/applicant/apply/recruit_default.asp) ||IT||||
+
 |||2024 05 07|[선진](https://recruit-sj.com/?utm_source=jasoseol&utm_medium=recruit_banner&utm_campaign=202401) ||웹개발||||
+
+
 
 
 |||2024 05 10|[드림라인](https://www.saramin.co.kr/zf_user/jobs/view?rec_idx=47975816&view_type=etc&ref=recruit_manage) ||클라우드 엔지니어, 웹이 있음||||
@@ -258,6 +259,12 @@
 
 |||2024 05 12|[휠라 홀딩스](https://www.filaholdings.com/kr/main/index.asp) ||웹개발||||
 |||2024 05 12|[MBC](https://imbc.career.greetinghr.com/recruit) ||웹서버 개발||||
+
+
+
+
+|||2024 05 16|[케이뱅크](https://inthiswork.com/archives/118787) ||프론트엔드||||
+
 |||2024 05 22|[AJ네트워크](https://ajnet.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180280) ||경력 3년||||
 
 
@@ -275,7 +282,6 @@
 
 
 
-||||[]() ||||||
 ||||[]() ||||||
 ||||[]() ||||||
 ||||[]() ||||||
