--- a/_posts/Resume/recent/2024-01-11-24년이력서.md
+++ b/_posts/Resume/recent/2024-01-11-24년이력서.md
@@ -107,7 +107,7 @@
 
 # 기타
     - 2023.10.07 빅데이터분석기사 필기 (한국데이터산업진흥원)❌
-    - 2022.07.24 ~ 2024.04.30 자격증 오픈채팅방 및 스터디 운영
+    - 2022.07.24 ~ 2024.05.07 자격증 오픈채팅방 및 스터디 운영
         네이버 카페, 수제비에서 정보처리기사 실기를 준비할 8명 인원을 구해 오픈채팅방 개설을 시작으로, 현재는 부방장으로 정보처리기사 및 다른 IT 자격증에 대한 정보를 공유하는 카카오톡 오픈채팅방 운영 중입니다.
         - 2023.08.26 ~ 2023.10.06 빅데이터분석기사 스터디 운영
             네이버 카페, 데이터전문가포럼에서 스터디 원을 구해 스터디장으로 한달 간, 이기적 책을 기반으로 스터디를 운영했습니다.
@@ -135,7 +135,7 @@
         - 2022.10.24 ~ 2022.11.24 네이버커넥트, 부스트코스 데이터 사이언스 코칭스터디 8기 이수(4주)
         코칭스터디는 자기주도적 팀 학습을 기반으로 스케줄에 맞게 자유롭게 데이터 사이언스와 인공지능 강좌를 듣고, 매주 팀 프로젝트를 제공받고 토의하며, 코딩코치에게 실시간 피드백을 통해 문제를 해결하는 학습 과정입니다.
 
-    - 2021.06.14 ~ 2021.11.18 KIC 캠퍼스, 실무 프로젝트 기반 빅데이터 플랫폼 개발 및 분석 전문가 양성 과정 교육 이수
+    - 2021.06.14 ~ 2021.11.18 KIC 캠퍼스, 실무 프로젝트 기반 빅데이터 플랫폼 개발 및 분석 전문가 양성 과정
             빅데이터 플랫폼 기반 자바&파이썬 개발자 양성 과정으로, 웹 프로그래밍(java,jsp,spring)부터 시작하여, 머신러닝(python), 딥러닝(tensorflow)까지 전반적인 개발 환경을 습득하고, 현업기업 실무자 멘토링을 통한 프로젝트 중심으로, 실습 위주의 훈련 과정입니다. (840시간)
  
 ## 교내 경험
@@ -145,13 +145,13 @@
         - 2021.06.28 ~ 2021.07.09 프로그래밍 기초(Python) 계절학기 비대면 수업 도우미
         - 2020.10.20 ~ 2020.12.15 IOT-인공지능-빅데이터 수업 도우미
 
-    - 2021.03.02 ~ 2021.12.21   
-        신입생들의 자퇴를 막기 위해, 주기적으로 학생들과 담당 교수님들 사이에서 상담 일정을 조정해주고, 대화하며 보통 진로에 대한 고민을 들어주는 역할.
+    - 2021.03.02 ~ 2021.12.21 한국공학대학교(한국산업기술대학교) 21년도 1~2학기 신입생 상담 도우미(봉사장학)
+        신입생들의 자퇴를 막기 위해, 주기적으로 학생들과 담당 교수님들 사이에서 상담 일정을 조정해주고, 대화하며 보통 진로에 대한 고민을 들어주는 역할입니다.
 
     - 2020.10.01 ~ 2021.03.01 한국공학대학교(한국산업기술대학교) 프로젝트 교직원, 근로 학생
         코로나 시기에 프로젝트 계약직으로 뽑을 당시, 주 업무는 교수님 비대면 강의 환경 세팅과 강의 영상 편집이었으며, 교양교육센터(G동115호)에서 근로 학생을 병행하며 활동했습니다.
 
-    - 2019.10.27 ~ 2020.01.18 필리핀 바기오 어학연수
+    - 2019.10.27 ~ 2020.01.18 BECI, 필리핀 바기오 어학연수
     - 2017.11.24 제12회 교내 KPU 소프트웨어 경진 대회 입상, 한국공학대학교(한국산업기술대학교)
 
 ----
