--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -165,7 +165,7 @@
 |-|124|2024 04 25|[삼아알미늄]() ||IT|❌ 미지원|||
 |-|125|2024 04 28|[웅진](https://woongjinit-recruiter.career.greetinghr.com/) ||java 개발|❌ 미지원|||
 |-|126|2024 04 28|[인바디](https://www.inbodyrecruit.com/) ||AOS|❌ 미지원|||
-|46|127|2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695?utm_source=jasoseol&utm_medium=banner&utm_campaign=2404hdclabs) |대|라눅스 인프라개발 및 운영 부문|📤 서류제출|||
+|46|127|2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695?utm_source=jasoseol&utm_medium=banner&utm_campaign=2404hdclabs) |대|라눅스 인프라개발 및 운영 부문|❌📤 서류 탈락|||
 |-|128|2024 05 02|[동원그룹](https://careers.dongwon.com/Recruit/Detail/1294538?p=iyNfKrdnmP2qvRp8eLoBoZUpoAd7oXoMRF~univ~qHHbyt3iKt8daueOf4L73r4u/JYOmXuNw3JjRTEtpR5tnhbU~univ~CWg0nAO5i9tIT7P0kOt6hpLUYDNquLubJDLueuz0tviL1oUDuAe4GPRhG1jVAiqBdQTYBGNx8CwtJirbzXrwGnM=) ||웹개발|❌ 미지원|||
 |47|129|상시|[컴투스](https://com2us.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180246) ||산후대체, 웹개발|📤 서류제출|||
 |48|130|2024 05 24|[좋은생각](https://www.jobkorea.co.kr/Recruit/GI_Read/44541625?Oem_Code=C1) |중소|리액트 경력|📤 서류제출|||
@@ -209,53 +209,36 @@
 |70|154|2024 05 10|[에스엠인터네셔널](https://www.jobkorea.co.kr/Recruit/GI_Read/44444050?Oem_Code=C1&sc=26) ||디저트39 웹앱 서비스 기획|📤 서류제출|||
 
 
+0/10
 
 
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
 |71|155|2024 07 02|[엠게임](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44609800?Oem_Code=C1) ||웹개발자|📤 서류제출|||
 |72|156|2024 06 10|[누리플러스](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44604410?Oem_Code=C1) ||소프트웨어 개발|📤 서류제출|||
-|||2024 05 05|[아시아나IDT](https://asianaidt.recruiter.co.kr/appsite/company/index) ||시스템 운영, 경력2년|❌ 미지원|||
-|||2024 05 05|[투비소프트](https://www.jobkorea.co.kr/Recruit/GI_Read/44395286?Oem_Code=C1&sc=15) ||이커머스|❌ 미지원|||
-|||2024 05 05|[현대자동차 GIT](https://www.jobkorea.co.kr/Recruit/GI_Read/44531120?Oem_Code=C1&sc=7) |||❌ 미지원|||
-
-
-
- |73|157|2024 05 09|[SK 쉴더스](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44604137?Oem_Code=C1) ||프론트엔드 경력 2년||||
-
-
-
-|||2024 05 06|[이지케어택](https://ezcaretech.career.greetinghr.com/o/109146) ||의료IT|📤 서류제출|||
-||||[도미노피자](https://www.jobkorea.co.kr/Recruit/GI_Read/44300917?GI_No=46633416) |||❌ 미지원| 경력 3~5년||
-
-|||2024 05 06|[하나펀드서비스](https://www.jobkorea.co.kr/Recruit/GI_Read/44524415?Oem_Code=C1&sc=7) ||||||
-
-|||2024 05 06|[경동나비엔](https://recruit.kdfamily.co.kr/) ||R&D IOT 서버 백엔드, 구로||||
-|||2024 05 06|[이랜드 이노플](https://careers.eland.co.kr/announce/recruit/hxCcG2wOtfklvYj5Zmea5XtMDw8P) ||외식 시스템 개발 및 운영||||
-
-
-|||2024 05 06|[슈피겐 코리아](https://career.spigenkorea.co.kr/) ||웹개발||||
-
-
-
-|||상시|[카페24](https://www.jobkorea.co.kr/Recruit/GI_Read/44457247?Oem_Code=C1&sc=15) ||||||
-
-
-
-|||2024 05 07|[NH투자증권](https://nhqv-recruit2024.com/?utm_source=jas01&utm_campaign=nh2024up) ||||||
-|||2024 05 07|[한국예탁결제원](https://ksd.saramin.co.kr/service/ksd/3136/applicant/apply/recruit_default.asp) ||IT||||
-
-|||2024 05 07|[선진](https://recruit-sj.com/?utm_source=jasoseol&utm_medium=recruit_banner&utm_campaign=202401) ||웹개발||||
-
-
-
-
+|73|157|2024 05 09|[SK 쉴더스](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44604137?Oem_Code=C1) ||프론트엔드 경력 2년, OSS 업무 시스템 개발자 채용 (~5/9)|📤 서류제출|||
+|-|158|2024 05 05|[아시아나IDT](https://asianaidt.recruiter.co.kr/appsite/company/index) ||시스템 운영, 경력2년|❌ 미지원|||
+|-|159|2024 05 05|[투비소프트](https://www.jobkorea.co.kr/Recruit/GI_Read/44395286?Oem_Code=C1&sc=15) ||이커머스|❌ 미지원|||
+|-|160|2024 05 05|[현대자동차 GIT](https://www.jobkorea.co.kr/Recruit/GI_Read/44531120?Oem_Code=C1&sc=7) |||❌ 미지원|||
+|74|161|2024 05 06|[이지케어택](https://ezcaretech.career.greetinghr.com/o/109146) ||의료IT|📤 서류제출|||
+|-|162|2024 05 06|[도미노피자](https://www.jobkorea.co.kr/Recruit/GI_Read/44300917?GI_No=46633416) |||❌ 미지원| 경력 3~5년||
+|75|163|2024 05 06|[하나펀드서비스](https://www.jobkorea.co.kr/Recruit/GI_Read/44524415?Oem_Code=C1&sc=7) ||어플리케이션아키텍쳐|📤 서류제출|||
+|-|164|2024 05 06|[경동나비엔](https://recruit.kdfamily.co.kr/) ||R&D IOT 서버 백엔드, 구로|❌ 미지원|||
+|-|165|2024 05 06|[이랜드 이노플](https://careers.eland.co.kr/announce/recruit/hxCcG2wOtfklvYj5Zmea5XtMDw8P) ||외식 시스템 개발 및 운영|❌ 미지원|||
+|-|166|2024 05 06|[슈피겐 코리아](https://career.spigenkorea.co.kr/) ||웹개발|❌ 미지원|||
+|76|167|2024 05 07|[NH투자증권](https://nhqv-recruit2024.com/?utm_source=jas01&utm_campaign=nh2024up) ||IT|🤖 AI역량검사|||
+|-|168|2024 05 07|[한국예탁결제원](https://ksd.saramin.co.kr/service/ksd/3136/applicant/apply/recruit_default.asp) |공기업|IT|❌ 미지원|||
+|-|169|2024 05 07|[선진,하림](https://recruit-sj.com/?utm_source=jasoseol&utm_medium=recruit_banner&utm_campaign=202401) ||웹개발 2~5년 경력|❌ 미지원|그냥 안 꼴려서||
+|77|170|2024 05 08|[크림 KREAM](https://recruit.snowcorp.com/rcrt/view.do?annoId=30002064&sw=&subJobCdArr=&sysCompanyCdArr=KRM&empTypeCdArr=&entTypeCdArr=&workAreaCdArr=) ||Payment&Infra 체험형 인턴|📤 서류제출|||
+|-|171|상시|[넥슨](https://career.nexon.com/user/recruit/member/postDetail?joinCorp=NX&reNo=20230283&currentPage=0) |대|프론트엔드 UI|❌ 미지원|마감, 게으름||
+|-|172|상시|[티맥스티베로](https://tmaxcareers.ninehire.site/) ||웹서비스 프론트엔드 연구원|❌ 미지원|마감, 게으름||
+|||2024 05 10|[LX MMA](https://apply.lxcareers.com/app/job/RetrieveJobNoticesDetail.rpi?jobNoticeId=16128) ||it infra||필수 영어 성적||
+|||2024 05 09|[엔테크서비스](https://job.incruit.com/jobdb_info/jobpost.asp?job=2404090000122) |||❌ 미지원|마감, 게으름||
+|||2024 05 10|[한국교육환경보호원](https://job.incruit.com/jobdb_info/jobpost.asp?job=2404300003125) |||❌ 미지원|||
 |||2024 05 10|[드림라인](https://www.saramin.co.kr/zf_user/jobs/view?rec_idx=47975816&view_type=etc&ref=recruit_manage) ||클라우드 엔지니어, 웹이 있음||||
-|||2024 05 10|[LX MMA](https://apply.lxcareers.com/app/job/RetrieveJobNoticesDetail.rpi?jobNoticeId=16128) ||it infra||||
 
-|||2024 05 14|[한국투자증권](https://career.koreainvestment.com/announcementList) ||||||
 
-|||2024 05 12|[세아상역](https://careers.sae-a.com/) ||IT||||
+|||상시|[토스](https://toss.im/career/apply/basic/4103014003) ||IT Supotter 계약직 3개월, 컴퓨터 환경 구축||||
 
 |||2024 05 12|[휠라 홀딩스](https://www.filaholdings.com/kr/main/index.asp) ||웹개발||||
 |||2024 05 12|[MBC](https://imbc.career.greetinghr.com/recruit) ||웹서버 개발||||
@@ -263,21 +246,57 @@
 
 
 
+
+
+|||2024 05 07|[중앙대학교병원광명점](https://caumc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180687) ||의료정보팀, RPA||||
+
+|||상시|[인바디](https://www.inbodyrecruit.com/recruit/contents/view/2401001) ||PC 개발, .NET 개발자||||
+|||상시|[티맥스소프트](https://tmaxcareers.ninehire.site/job_posting/CpR2rGZL) |대|코테, 3D App Back-End 연구원||||
+|||상시|[토스뱅크](https://toss.im/career/job-detail?job_id=4071101003) |중견|사전과제, 프로트엔드||||
+|||상시|[현대자동차](https://talent.hyundai.com/apply/applyView.hc?recuYy=2023&recuType=N2&recuCls=549) ||코테, 프론트엔드||||
+|||상시|[카페24](https://www.jobkorea.co.kr/Recruit/GI_Read/44457247?Oem_Code=C1&sc=15) ||코테, 웹개발||||
+|||상시|[아마존웹서비스](https://amazon.jobs/en/jobs/2549983/cloud-support-associate-ireland) ||Cloud Support Associate (Ireland 아일랜드 근무)||||
+|||상시|[한국투자저축은행](https://career.koreainvestment.com/announcementList) ||경력 상시ㅣ||||
+
+
+
+
+|||2024 05 12|[세아상역](https://careers.sae-a.com/) ||IT||||
+
+10일 금
+
+
+
+12일 일
+|||2024 05 13|[우체국금융개발원](https://recruit.posid.or.kr/) ||공고는 인크루트, 체크카드업무 IT 지원||||
+|||2024 05 13|[한국공항공사](https://airport.cairos.co.kr/airport/1226/Recruit/RecruitView.aspx) ||전산||||
+
+13일 월
+|||2024 05 14|[스포츠토토코리아](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405080000333&handle=&rf=1) ||만2년 이상, 투표권개발팀||||
+|||2024 05 14|[한국투자증권](https://career.koreainvestment.com/announcementList) ||||||
+
+
+14일 
+|||2024 05 15|[에코마케팅](https://echomarketing.career.greetinghr.com/o/110818) ||백엔드 python||||
 |||2024 05 16|[케이뱅크](https://inthiswork.com/archives/118787) ||프론트엔드||||
 
+
+15일
+|||2024 05 16|[전북은행](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405030001195&handle=48250FBD2E7FAA1ABAE691872601039F85DF34FC3DA36E158CCEAF0DAE62FB8B) ||경력직 대리급 이하, IT||||
+|||2024 05 17|[신용보증재간중앙회](https://job.incruit.com/entry/jobpost.asp?job=2404300004694) ||||||
+
+16일 목
+|||2024 05 19|[한미약품](https://hanmi.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180471) ||웹개발||||
+|||2024 05 19|[안랩](https://ahnlab.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180229) ||웹개발||||
+
+17일 금
 |||2024 05 22|[AJ네트워크](https://ajnet.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180280) ||경력 3년||||
+|||2024 05 22|[엔지니어링공제조합](https://www.egic.co.kr/e/hp/business/openHireIntro.do) ||IT, 3월19일에 올라왔었는데 또?||||
 
+|||2024 05 26|[우리은행](https://job.incruit.com/entry/jobpost.asp?job=2405030005284) ||디지털 제휴, 경력직 스멜||||
 
+|||상시, 2024 06 30|[삼천리](https://www.jobkorea.co.kr/Recruit/GI_Read/44624305?Oem_Code=C1&sc=54&gno=44624305) ||경력직 IT 2~3년||||
 
-
-
-# 상시
-|||상시|[티맥스소프트](https://tmaxcareers.ninehire.site/job_posting/CpR2rGZL) |대|3D App Back-End 연구원||||
-|||상시|[넥슨](https://career.nexon.com/user/recruit/member/postDetail?joinCorp=NX&reNo=20230283&currentPage=0) |대|프론트엔드 UI||||
-|||상시|[토스뱅크](https://toss.im/career/job-detail?job_id=4071101003) |중견|프로트엔드||||
-|||상시|[현대자동차](https://talent.hyundai.com/apply/applyView.hc?recuYy=2023&recuType=N2&recuCls=549) ||||||
-|||상시|[아마존웹서비스](https://amazon.jobs/en/jobs/2549983/cloud-support-associate-ireland) ||Cloud Support Associate (Ireland 아일랜드 근무)||||
-|||상시|[티맥스티베로](https://tmaxcareers.ninehire.site/) ||웹서비스 프론트엔드 연구원||||
 
 
 
