--- a/_posts/Resume/recent/2024-04-12-5차자기소개서.md
+++ b/_posts/Resume/recent/2024-04-12-5차자기소개서.md
@@ -435,6 +435,7 @@ Spring을 사용하는 지방세 관련 공공기관 SI에서 근무할 당시, 
 
 # 1000자
 - 985
+[개발 팀 내에서 꼼꼼함과 업무 파악이 가져오는 변화]
 [지난 회사를 다니면서 얻었던, 개발할 때 중요하게 여기는 두 가지 요소가 있습니다.]
 첫 번째, 꼼꼼함입니다.
 지난 회사 같은 경우 소스코드를 수정하게 되면 업무 진행 프로세스 절차에 따라 진행이 되는데, 단위 테스트와 통합 테스트 이후에 시큐어 코딩 단계가 있었습니다. 거기에 주로 걸렸던 보안 이슈는 XSS입니다. 이 문제의 주된 원인은 선언하고 사용하지 않는 변수였습니다. 지방세 관련 공공기관이 그래도 돈을 다루는 부분이다 보니까 작은 논리적인 어떤 오류가 결국에는 사용자에게 피해를 끼칠 수 있습니다. 프로그램적 스킬도 중요하지만 좀 더 꼼꼼하게 볼 수 있어야 한다고 생각했고, 이러한 방식을 통하여 지난 회사에 기여했습니다.
