--- a/_posts/Resume/recent/2024-04-23-스탠다드차드은행.md
+++ b/_posts/Resume/recent/2024-04-23-스탠다드차드은행.md
@@ -42,7 +42,7 @@ greenmaster516으로 했는데 흠,,,
 SC제일은행이 필요한 금융기관 내 HR IT시스템 개발 업무에는 이해관계자들과 소통이 필요한 부분이, 지난 회사에서 행안부나 자치단체 공무원과 상호작용을 해야 한다는 점에서 관련성이 높다고 느꼈습니다. 금융 공공기관 SI에서 Spring 기반 지방세 시스템을 개발 및 유지보수하며, 어려운 상황에서 복잡한 시스템을 파악하여 해결했던 경험이 있습니다. 이 경험을 통해 SC제일은행에서 프로젝트를 수행할 때 문제가 발생해도, 파악하고 해결하며 역경을 이겨내는 모습을 보여드릴 수 있습니다. 비록 7개월이란 짧은 기간이지만, 맡은 업무에 최선을 다해 새로운 기회를 얻고자 지원하게 되었습니다.
 
 앞으로의 7개월 동안의 계획을 말하겠습니다. 처음 2주 동안, SC제일은행의 소스코드 분석 및 구조를 엑셀 파일에 정리하면서 사업의 방향성 및 업무에 대해 파악하겠습니다. 이후엔 가르칠 필요없이 최소한의 가이드라인 만 주신다면, 주시는 업무에 최선을 다해 진행하겠습니다.
-이후 6개월 간, 팀원과 동화된 모습을 보여드리면서, 계약기간 동안 기존에 작성된 레거시 코드나 앞으로 있을 개발 부문에 오류나 보안사항을 준수하며, 맡은 역할에서 성과가 날 수 있게, 꼼꼼하게 수행하면서 마지막 날까지 최선을 다해 계약 기간을 마치겠습니다.
+이후 6개월 간, 팀원과 동화된 모습을 보여드리면서, 계약기간 동안 기존에 작성된 레거시 코드**나** 앞으로 있을 개발 부문에 오류나 보안사항을 준수하며, 맡은 역할에서 성과가 날 수 있게, 꼼꼼하게 수행하면서 마지막 날까지 최선을 다해 계약 기간을 마치겠습니다.
 
 
 
