--- a/_posts/Resume/recent/2024-05-06-하나펀드서비스.md
+++ b/_posts/Resume/recent/2024-05-06-하나펀드서비스.md
@@ -8,8 +8,7 @@
 
 [하나펀드서비스에서 더 나은 펀드 서비스 지원]
 저의 직업관은 가지고 있는 기술과 경험을 어떻게 사회에 기여할 수 있느냐 입니다.
-최근 물가상승에 의해 자산관리 서비스에 대한 필요성을 느껴, 주식과 코인 투자를 해보았고 실패한 경험이 있습니다.
-
+최근 물가상승에 의해 자산관리 서비스에 대한 필요성을 느껴, 주식과 코인 투자를 해보았고 실패한 경험이 있습니다. 펀드는 적은 금액으로 투자가 가능하고, 여러 사람의 자금을 모아 함께 투자하고 수익을 나우어 갖는 다는 점에서 이상적이었습니다. 특히 하나펀드서비스는 차별화 된 대고객 서비스로 금융환경의 변화에 대응하여, 지속적으로 관리합니다.
 하나펀드서비스의 어플리케이션 아키텍쳐 부문에서 통해 IT 솔루션을 제공하면서, 펀드 서비스의 접근성을 높여, 보다 쉽게 사용자가 자산을 관리할 수 있도록 돕고싶습니다. 실시간 모니터링 시스템을 강화와 시스템 안정성을 높이고, 운영 효율성을 향상시켜, 장애 대응 시간을 단축하는데 기여함으로서 고객의 편리성 극대화하여, 만족도를 올리고 자산을 성장시켜, 고객과 행복을 나눌 수 있게 기여하고 싶어 지원하게 되었습니다.
 
 
@@ -33,7 +32,7 @@
 공공기관 SI에서 다양한 코드 분석과 촉박한 개발 기간 동안 결과물을 가져와야 했던 근무 경험이 있습니다. 이러한 경험을 바탕으로 누군가가 저를 가르치는 인력을 줄일 수 있으며, 스스로 소스코드를 분석하고 파악하여, 업무에 보다 빠르게 적응할 자신이 있습니다. 신입으로서 작게나마 인력 소비를 줄여, 기술적 해결책을 제공함으로서, 사용자 만족도에 보다 빠르게 기여하는게 제 현실적 강점입니다.
 
 입사 후에는 처음 2주 동안, 하나펀드서비스의 소스코드 분석 및 구조를 엑셀 파일에 정리하면서 사업의 방향성 및 업무에 대해 파악하겠습니다. 이후엔 가르칠 필요없이 최소한의 가이드라인 만 주신다면, 주시는 업무에 최선을 다해 진행하겠습니다.
-이후 2개월 간, 팀원과 동화된 모습을 보여드리면서, 계약기간 동안 기존에 작성된 레거시 코드나 앞으로 있을 개발 부문에 오류나 보안사항을 준수하며, 맡은 역할에서 성과가 날 수 있게, 꼼꼼하게 수행하면서 새로운 기회를 얻을 수 있도록 최선을 다하겠습니다.
+이후 2개월 간, 팀원과 동화된 모습을 보여드리면서, 계약기간 동안 기존에 작성된 레거시 코드**나** 앞으로 있을 개발 부문에 오류나 보안사항을 준수하며, 맡은 역할에서 성과가 날 수 있게, 꼼꼼하게 수행하면서 새로운 기회를 얻을 수 있도록 최선을 다하겠습니다.
 3개월 차부터는 스스로 업무를 차질 없이 수행할 수 있도록 하겠습니다.
 
 
