--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -235,20 +235,34 @@
 |||2024 05 10|[LX MMA](https://apply.lxcareers.com/app/job/RetrieveJobNoticesDetail.rpi?jobNoticeId=16128) ||it infra||필수 영어 성적||
 |||2024 05 09|[엔테크서비스](https://job.incruit.com/jobdb_info/jobpost.asp?job=2404090000122) |||❌ 미지원|마감, 게으름||
 |||2024 05 10|[한국교육환경보호원](https://job.incruit.com/jobdb_info/jobpost.asp?job=2404300003125) |||❌ 미지원|||
-|||2024 05 10|[드림라인](https://www.saramin.co.kr/zf_user/jobs/view?rec_idx=47975816&view_type=etc&ref=recruit_manage) ||클라우드 엔지니어, 웹이 있음||||
+|||2024 05 10|[드림라인](https://www.saramin.co.kr/zf_user/jobs/view?rec_idx=47975816&view_type=etc&ref=recruit_manage) ||클라우드 엔지니어, 웹이 있음|❌ 미지원|||
+|||2024 05 12|[휠라 홀딩스](https://www.filaholdings.com/kr/main/index.asp) ||웹개발|📤 서류제출|||
+|||2024 05 14|[스포츠토토코리아](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405080000333&handle=&rf=1) ||만2년 이상, 투표권개발팀|❌ 미지원|||
+|||2024 05 14|[한국투자증권](https://career.koreainvestment.com/announcementList) |||❌ 미지원|||
+|||2024 05 12|[세아상역](https://careers.sae-a.com/) ||IT|❌ 미지원|||
+|||2024 05 12|[MBC](https://imbc.career.greetinghr.com/recruit) ||웹서버 개발|❌ 미지원|||
+|||2024 05 13|[우체국금융개발원](https://recruit.posid.or.kr/) ||공고는 인크루트, 체크카드업무 IT 지원|❌ 미지원|||
+|||2024 05 13|[한국공항공사](https://airport.cairos.co.kr/airport/1226/Recruit/RecruitView.aspx) ||전산|❌ 미지원|||
 
 
 |||상시|[토스](https://toss.im/career/apply/basic/4103014003) ||IT Supotter 계약직 3개월, 컴퓨터 환경 구축||||
 
-|||2024 05 12|[휠라 홀딩스](https://www.filaholdings.com/kr/main/index.asp) ||웹개발||||
-|||2024 05 12|[MBC](https://imbc.career.greetinghr.com/recruit) ||웹서버 개발||||
 
 
 
 
 
 
-|||2024 05 07|[중앙대학교병원광명점](https://caumc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180687) ||의료정보팀, RPA||||
+
+|||2024 05 15|[중앙대학교병원광명점](https://caumc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180687) ||의료정보팀, RPA||||
+|||2024 05 15|[에코마케팅](https://echomarketing.career.greetinghr.com/o/110818) ||백엔드 python||||
+|||2024 05 16|[케이뱅크](https://inthiswork.com/archives/118787) ||프론트엔드||||
+|||2024 05 16|[전북은행](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405030001195&handle=48250FBD2E7FAA1ABAE691872601039F85DF34FC3DA36E158CCEAF0DAE62FB8B) ||경력직 대리급 이하, IT||||
+|||2024 05 17|[신용보증재간중앙회](https://job.incruit.com/entry/jobpost.asp?job=2404300004694) ||||||
+
+
+
+
 
 |||상시|[인바디](https://www.inbodyrecruit.com/recruit/contents/view/2401001) ||PC 개발, .NET 개발자||||
 |||상시|[티맥스소프트](https://tmaxcareers.ninehire.site/job_posting/CpR2rGZL) |대|코테, 3D App Back-End 연구원||||
@@ -260,30 +274,6 @@
 
 
 
-
-|||2024 05 12|[세아상역](https://careers.sae-a.com/) ||IT||||
-
-10일 금
-
-
-
-12일 일
-|||2024 05 13|[우체국금융개발원](https://recruit.posid.or.kr/) ||공고는 인크루트, 체크카드업무 IT 지원||||
-|||2024 05 13|[한국공항공사](https://airport.cairos.co.kr/airport/1226/Recruit/RecruitView.aspx) ||전산||||
-
-13일 월
-|||2024 05 14|[스포츠토토코리아](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405080000333&handle=&rf=1) ||만2년 이상, 투표권개발팀||||
-|||2024 05 14|[한국투자증권](https://career.koreainvestment.com/announcementList) ||||||
-
-
-14일 
-|||2024 05 15|[에코마케팅](https://echomarketing.career.greetinghr.com/o/110818) ||백엔드 python||||
-|||2024 05 16|[케이뱅크](https://inthiswork.com/archives/118787) ||프론트엔드||||
-
-
-15일
-|||2024 05 16|[전북은행](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405030001195&handle=48250FBD2E7FAA1ABAE691872601039F85DF34FC3DA36E158CCEAF0DAE62FB8B) ||경력직 대리급 이하, IT||||
-|||2024 05 17|[신용보증재간중앙회](https://job.incruit.com/entry/jobpost.asp?job=2404300004694) ||||||
 
 16일 목
 |||2024 05 19|[한미약품](https://hanmi.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180471) ||웹개발||||
