--- a/_posts/Resume/Xprograming/Python/Project_LCE/2023-12-05-Day9.병원RPA.md
+++ b/_posts/Resume/Xprograming/Python/Project_LCE/2023-12-05-Day9.병원RPA.md
@@ -66,6 +66,8 @@ git pull origin main
 
 
 # 프로젝트 변경 은행 + RPA 은행
+RPA가 뭔가 했더니 스타차트 같은 거네, 도형 올리고 빠르게 하는 거 오케이 쉽다 가보자 이미지 인식이 뭔가 했네
+
 React와 Django를 이용해 RPA(Robotic Process Automation) 시스템을 구축하는 프로젝트는 효과적인 웹 기반 사용자 인터페이스와 강력한 백엔드 기능을 결합할 수 있는 좋은 기회를 제공합니다. 다음은 React와 Django를 사용하여 RPA 시스템을 개발하는 단계별 접근 방식입니다
 
 - 1단계: 프로젝트 계획 및 설계
