--- a/_posts/Resume/recent/2024-04-12-5차자기소개서.md
+++ b/_posts/Resume/recent/2024-04-12-5차자기소개서.md
@@ -7,6 +7,33 @@
 어떻게 어떤 어려움과 그때의 내 태도는 어땠는지
 이거 참 말하는 거 보니 스마트하고 성실하고 사람들이랑 잘 어올리는 사람이군
 
+
+
+
+# 기본 잡코리아 이력서
+[기회는 책임감에서]
+어릴 때, 아버지가 가정을 책임지기 위해 일하시는 모습을 지켜보며, 성인이 된 이후에는 이런 보살핌에 보답하고자 스스로 점진적으로 목표를 세워 변화를 주게 되었습니다.
+우선, 군대에서 변화를 주고자 어학연수 계획을 세웠습니다. 그리고 휴가를 얻을 수 있는 활동에 적극 참여하여 중대에서 가장 휴가를 많이 보유한 사람으로 3위라는 기록을 세웠습니다. 그 덕에 휴가 중, 단기 아르바이트를 통해 일정 금액을 모아 전역 후, 어학연수를 갈 수 있는 기회를 얻었습니다.
+
+두 번째로, 대학교에서 근로로 참여해 책임감을 가지고 일에 임하였습니다. 저는 야간 대학교를 나와 주간 수업에는 참여할 수 없습니다. 그러나 주변 교직원분들의 추천으로 수업 도우미로서 참여할 수 있게 되었고, 이후에는 수업의 질을 올리기 위해 최선을 다한 결과 교수님을 만족시킬 수 있었습니다. 그 과정에서 교수님과 진로 방향에 대한 많은 이야기를 했으며, 그 정보를 통해 국비지원 교육과 자격증으로 스스로를 성장시킬 수 있었습니다.
+
+지난 경험에서 책임감을 가지고 일을 끝까지 해낸다면, 인정을 받고 추천되어, 더 많은 기회가 주어진다는 것을 배웠습니다. 이러한 가치관을 통해 회사에서 책임감을 가지고 일에 임하여 더 많은 기회를 얻고 싶습니다.
+
+
+[신속한 학습과 적응력을 가진 개발자입니다.]
+공공기관 SI에서 다양한 코드 분석과 촉박한 개발 기간 동안 결과물을 가져와야 했던 근무 경험이 있습니다. 이러한 경험을 바탕으로 누군가가 저를 가르치는 인력을 줄일 수 있으며, 스스로 소스코드를 분석하고 파악하여, 업무에 보다 빠르게 적응할 자신이 있습니다. 신입으로서 작게나마 인력 소비를 줄여, 기술적 해결책을 제공함으로서, 사용자 만족도에 보다 빠르게 기여하는게 제 현실적 강점입니다.
+
+지난 회사에서 개발 시, Drill Down 분석 방식을 통하여 시스템 구조를 파악하고, 막히는 부분은 동료 개발자의 피드백을 적극 수용하여 개발하였습니다. 또한 대부분 업무가 DB의 Table에서 데이터를 가져와 처리하거나, 사용자가 입력한 주민등록번호로 시민 정보를 가지고 있는 API를 ESB로 연계하여, XML에 작성한 쿼리를 통해, 값을 받아오는 방식이라 주로 응답시간을 줄이기 위해 쿼리를 통한 성능 최적화에 신경썼습니다. 공무원의 시스템적 문의가 오기 때문에 각 세목에 필요한 업무를 숙지하고, 리눅스를 활용하여, Web Log 데이터를 모니터링 하거나 DB에 값이 제대로 들어갔는지 확인했습니다. 문제 발견 시에는 SQL 쿼리를 작성하여 실행 권한이 있는 상급자에게 부탁하거나 소스코드를 개선하여 해결한 경험이 있습니다.
+
+이런 경험에서 얻은 강점과 약점을 적절하게 이용하여 회사에 보다 빠르게 적응해 성과를 이뤄내 나가겠습니다.
+
+
+
+
+
+
+
+
 ----
 
 # 100자 미만
