--- a/_posts/Resume/recent/2024-05-16-중앙대학교병원.md
+++ b/_posts/Resume/recent/2024-05-16-중앙대학교병원.md
@@ -13,15 +13,51 @@
 의료정보팀
 
 ## 주요업무
-1. RPA 개발 및 운영
+1. ❗️ RPA 개발 및 운영
 2. RPA 적용 가능 업무 식별 및 과제 검토 등
 
 ## 응시자격
-RPA개발(이미지 인식 기반) 또는  의료 IT 프로그램 개발 경력자 우대
+❗️ RPA개발(이미지 인식 기반) 또는 의료 IT 프로그램 개발 경력자 우대
 - 응시자격에 개발 경험이 있네? 빠르게 만들어버려 이따위 거
 
 
+## RPA
+- 참고 기사
+
+[용인세브란스, 격리병상 자동 배정 등 RPA 솔루션 구축](https://www.doctorsnews.co.kr/news/articleView.html?idxno=140615)
 
 
+
+# 자기소개서
+## 성장과정 500
+
+
+
+## 장단점 500
+
+
+
+## 지원동기 및 포부 500
+[중앙대학교광명병원에서 더 나은 의료 서비스 지원]
+최근 두달 간 중앙대학교광명병원에서 진료하며, 의사 분들이 사용하는 화면의 UI를 유심히 지켜봤습니다. 저런 화면이 있다면 의사의 업무 효율성 증가 뿐만 아니라 환자 입장에서 이해하기도 쉬울 거라는 생각이 들어 만들어보고 싶었습니다. 이번 공고를 확인하자마자 기회라 생각되어 즉시 DJango를 바탕으로, 간단하게 이미지를 전처리할 수 있는 RSA 개발을 해보았습니다.
+
+저의 직업관은 가지고 있는 기술과 경험을 어떻게 사회에 기여할 수 있느냐 입니다. 의료IT 분야에 관련하여 의료진의 업무 효율성을 올려 환자에게 더 나은 진료 과정을 제공할 수 있도록 돕고싶습니다. 제가 가진 기술적 지식과 프로젝트 관리 경험을 활용하여 중앙대학교광명병원에서 효율적이고 안정적인 시스템 개발을 지원함으로서 의사 뿐만 아니라 아픈 환자도 쉽게 진료를 이해할 수 있게 하고싶어 지원하였습니다.
+
+
+
+
+
+
+
+- 666
+[이지케어텍에서 더 나은 의료 서비스 지원]
+저의 직업관은 가지고 있는 기술과 경험을 어떻게 사회에 기여할 수 있느냐 입니다. 이지케어택에서 의료IT 분야에 관련하여 환자 혹은 의료진에게 더 나은 서비스를 제공할 수 있도록 돕고싶습니다.
+
+최근 림프종 진단을 위해 병원을 방문한 경험이 있습니다. 진료를 대기하면서, 간단한 UI의 키오스크가 있음에도 나이가 드신 분들은 간호사에게 물어보는 것을 선호한다는 점을 발견했습니다. 제가 가진 기술적 지식과 프로젝트 관리 경험을 활용하여 이지케어택에서 이러한 기술적 배경을 바탕으로, 효율적이고 안정적인 시스템 개발을 지원함으로서 이러한 환자도 쉽게 접근하여 진료를 받을 수 있게 기여하고 싶어 지원하였습니다.
+
+인턴으로 입사 후에는 처음 2주 동안, 이지케어택의 소스코드 분석 및 구조를 엑셀 파일에 정리하면서 사업의 방향성 및 업무에 대해 파악하겠습니다. 이후엔 가르칠 필요없이 최소한의 가이드라인 만 주신다면, 주시는 업무에 최선을 다해 진행하겠습니다.
+이후 2개월 간, 팀원과 동화된 모습을 보여드리면서, 계약기간 동안 기존에 작성된 레거시 코드**나** 앞으로 있을 개발 부문에 오류나 보안사항을 준수하며, 맡은 역할에서 성과가 날 수 있게, 꼼꼼하게 수행하면서 마지막 날까지 새로운 기회를 얻을 수 있도록 최선을 다해 인턴 기간을 마치겠습니다.
+
+## 경력 500
 
 
