--- a/_posts/Resume/Xprograming/Python/Project_LCE/2024-05-13-Day13.barcodescan.md
+++ b/_posts/Resume/Xprograming/Python/Project_LCE/2024-05-13-Day13.barcodescan.md
@@ -33,5 +33,13 @@ decode_barcode('path_to_your_image.jpg')
 
 
 이미지 로드: PIL의 Image.open() 함수가 지정된 경로에서 이미지를 로드합니다.
+
 바코드 디코드: pyzbar의 decode() 함수가 이미지를 스캔하여 바코드를 찾고 디코드합니다.
+
 데이터 출력: 감지된 각 바코드에 대해 타입(예: QR 코드, EAN)과 바코드에 인코드된 데이터를 추출하여 출력합니다.
+
+
+## pyzbar 와 pillow 라이브러리에 대해 알기
+
+
+
