--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -25,7 +25,7 @@
 |-|14|2024 02 13| [신용회복위원회](https://ccrs.career.co.kr/jobs/jobs_view.asp?ID=1001) |공|전산 개발|❌ 미지원|게으름||
 |8|15|2024 02 16|[한국음악저작권협회](https://www.komca.or.kr/service2/service_130301_info.jsp#) |공|전산관리 ERP|❌📤 서류탈락|모르겠다. 진심이다.||
 |-|16|2024 02 18|[현대트랜시스](https://hyundai-transys.recruiter.co.kr/career/jobs/12765) ||시트 전장품질(애매함)|❌ 미지원|||
-|9|17|2024 02 18|[SL](https://slworld.recruiter.co.kr/app/applicant/jobnotice/popupNoticeList/?applicantActionCode=SHOW_NOTICE) |중견|관리부분 IT(web), 경남 근무|❌🤖 AI역량검사 미응시|AI영어 면접과 PT면접을 두 번 보고 사전과제를 또 봐야한다. 이후에는 면접 2회, 합숙 면접? 있단다. 참 어려운 회사다.||
+|9|17|2024 02 18|⭐️[SL](https://slworld.recruiter.co.kr/app/applicant/jobnotice/popupNoticeList/?applicantActionCode=SHOW_NOTICE) |중견|관리부분 IT(web), 경남 근무|❌🤖 AI역량검사 미응시|AI영어 면접과 PT면접을 두 번 보고 사전과제를 또 봐야한다. 이후에는 면접 2회, 합숙 면접? 있단다. 참 어려운 회사다.||
 |-|18|2024 02 18|[LS ITC](https://lsitc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=170694) |대|IT/클라우드 인턴|❌ 미지원|게으름||
 |10|19|2024 02 19|[리딩투자증권](https://www.kofia.or.kr/brd/m_96/view.do?seq=28238&srchFr=&srchTo=&srchWord=&srchTp=&multi_itm_seq=0&itm_seq_1=0&itm_seq_2=0&company_cd=&company_nm=&page=1) ||IT개발(웹) |❌📤 서류탈락|||
 
@@ -55,8 +55,8 @@
 |-|37|2024 03 18|[삼성생명]() |대|금융IT, 오픽IL|❌ 미지원|영어성적||
 |-|38|2024 03 18|[삼성증권]() |대|IT|❌ 미지원|영어성적||
 |-|39|2024 03 18|[삼성화재해상보험]() |대|IT|❌ 미지원|영어성적||
-|18|40|2024 03 13|[경기신용보증재단](https://gcgf1.saramin.co.kr/service/gcgf1/2866/applicant/apply/recruit_default.asp) ||전산직|❌🗒️ NCS 필기 시험 불합|13점 차로?||
-|19|41|2024 03 13|[한국자금중개](https://kmb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=173416)|대|신입-IT|❌🖥️ 코딩테스트 탈락|2문제 만 풀고 2문제는 못풀었음||
+|18|40|2024 03 13|⭐️[경기신용보증재단](https://gcgf1.saramin.co.kr/service/gcgf1/2866/applicant/apply/recruit_default.asp) ||전산직|❌🗒️ NCS 필기 시험 불합|13점 차로?||
+|19|41|2024 03 13|⭐️[한국자금중개](https://kmb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=173416)|대|신입-IT|❌🖥️ 코딩테스트 탈락|2문제 만 풀고 2문제는 못풀었음||
 |20|42|2024 03 17|[우리에프아이에스](https://woorifis.careerlink.kr/) |대|IT개발/운영|❌📤 서류 탈락|이건 뭐 희망연봉에 3300만원 적었는데 떨어진 거 보면ㅋㅋㅋ||
 
 2/10
@@ -102,7 +102,7 @@
 |-|78|2024 04 01|[디와이그룹](https://www.saramin.co.kr/zf_user/jobs/relay/pop-view?rec_idx=47824329&t_ref=main&t_ref_content=platinum_fix_expand) ||시스템엔지니어링|❌ 미지원|||
 |27|79|2024 03 29|[단군소프트](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44205983?Oem_Code=C1&productType=VVIP&logpath=0) ||데브옵스|📤 서류제출|||
 |28|80|2024 03 29|[코스트코코리아](https://www.catch.co.kr/NCS/RecruitInfoDetails/394657) |||❌📤 문의메일 전송 거절|||
-|29|81|2024 04 03|[농협정보시스템](https://with.nonghyup.com/jbnf/jbnfDtl.do?jbnfSqno=66355) ||관측업무|❌👨‍👨‍👦 1차 면접 탈락|||
+|29|81|2024 04 03|⭐️[농협정보시스템](https://with.nonghyup.com/jbnf/jbnfDtl.do?jbnfSqno=66355) ||관측업무|❌👨‍👨‍👦 1차 면접 탈락|||
 |-|82|2024 04 04| [한국마사회]()||시스템 개발|❌ 미지원|||
 |30|83|2024 04 07|[JB우리캐피탈](https://wooricap.saramin.co.kr/apply_site/recruit/view) ||IT 인프라|❌📤 서류탈락|||
 
@@ -128,7 +128,7 @@
 |38|97|2024 04 30|[KS신용정보](https://www.jobkorea.co.kr/Recruit/GI_Read/44416261?Oem_Code=C1) |중견|자바|📤 서류제출 💀기업명 다르게 제출|||
 |39|98|2024 06 07|[한국능률협회컨설팅](https://www.jobkorea.co.kr/Recruit/GI_Read/44417155?Oem_Code=C1) |중견|자바 경력|📤 서류제출 💀기업명 다르게 제출|||
 |-|99|2024 04 14|[AXA손해보험]() ||데이터사이언스|❌ 미지원|||
-|40|99|2024 04 14|[코오롱베니트](https://dream.kolon.com/RECRUIT_KOLON/hr/rec/recruit/main/controller/candidate/MainRecruitWebController/init.hr) ||시스템개발(해외출장)|📤 서류제출|||
+|40|99|2024 04 14|[코오롱베니트](https://dream.kolon.com/RECRUIT_KOLON/hr/rec/recruit/main/controller/candidate/MainRecruitWebController/init.hr) ||시스템개발(해외출장)|❌📤 서류 탈락|||
 |-|100|2024 04 14|[메리츠증권](https://meritz.applyin.co.kr/jobs/12919) ||법인파생영업팀, 차익거래 주문관리시스템 고도화 개발|❌ 미지원|||
 
 
@@ -170,7 +170,7 @@
 |47|129|상시|[컴투스](https://com2us.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180246) ||산후대체, 웹개발|📤 서류제출|||
 |48|130|2024 05 24|[좋은생각](https://www.jobkorea.co.kr/Recruit/GI_Read/44541625?Oem_Code=C1) |중소|리액트 경력|📤 서류제출|||
 |49|131|2024 05 02|[메가스터디교육](https://www.jobkorea.co.kr/Recruit/GI_Read/44393033?Oem_Code=C1) ||공무원 웹개발자|📤 서류제출|||
-|50|132|2024 05 15|[크래디트나인](https://www.jobkorea.co.kr/Recruit/GI_Read/44458763?Oem_Code=C1) |중소|금융 SI|❌👨‍👨‍👦 1차 면접 미참석|||
+|50|132|2024 05 15|⭐️[크래디트나인](https://www.jobkorea.co.kr/Recruit/GI_Read/44458763?Oem_Code=C1) |중소|금융 SI|❌👨‍👨‍👦 1차 면접 미참석|||
 
 1/10
 암 검사하느라 정말 정신 없이 지냈음. 
@@ -186,16 +186,18 @@
 |55|137|2024 05 10|[동국시스템즈](https://www.jobkorea.co.kr/Recruit/GI_Read/44581737?Oem_Code=C1&sc=7) |중견|웹개발자, 내부시스템|📤 서류제출|||
 |56|138|상시|[DB FIS](https://www.jobkorea.co.kr/Recruit/GI_Read/44189056?Oem_Code=C1&sc=7) ||경력 2년 |📤 서류제출|||
 |57|139|2024 05 03|[에스엠 하이플러스](https://www.jobkorea.co.kr/Recruit/GI_Read/44557239?Oem_Code=C1&sc=7) ||금융 전산|📤 서류제출|||
-|58|140|2024 05 03|[이지케어택](https://www.jobkorea.co.kr/Recruit/GI_Read/44490489?Oem_Code=C1&sc=7) ||의료 sw|📤 서류제출|||
+|58|140|2024 05 08|[크림 KREAM](https://recruit.snowcorp.com/rcrt/view.do?annoId=30002064&sw=&subJobCdArr=&sysCompanyCdArr=KRM&empTypeCdArr=&entTypeCdArr=&workAreaCdArr=) ||Payment&Infra 체험형 인턴|❌📤 서류 탈락|||
 |59|141|2024 05 30|[넷엔드](https://www.jobkorea.co.kr/Recruit/GI_Read/44580939?Oem_Code=C1&sc=7) ||자바|📤 서류제출|||
 |60|142|2024 05 30|[코페이](https://www.jobkorea.co.kr/Recruit/GI_Read/44576486?Oem_Code=C1&sc=7) ||자바|📤 서류제출|||
 
 
+잡코리아 즉시지원 9개에 + 크림
+0/10
 
 
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
-|61|143||[크리스피드](https://www.jobkorea.co.kr/Recruit/GI_Read/44566787?Oem_Code=C1&sc=7) ||송파, 웹개발자|📤 서류제출|||
+|61|143||⭐️[크리스피드](https://www.jobkorea.co.kr/Recruit/GI_Read/44566787?Oem_Code=C1&sc=7) |중소|송파, 웹개발자|👨‍👨‍👦 1차 면접|||
 |62|144|2024 06 23|[천재교과서](https://www.jobkorea.co.kr/Recruit/OnPass/OnPassResult?gNo=44538065&R_No=25480631&PartIdx=35229570&sc=7) ||백엔드|📤 서류제출|||
 |63|145|2024 05 21|[신라 스테이](https://www.jobkorea.co.kr/Recruit/GI_Read/44483947?Oem_Code=C1&sc=7) ||전산|📤 서류제출|||
 |64|146|2024 05 08|[현대HT](https://www.jobkorea.co.kr/Recruit/GI_Read/44437247?Oem_Code=C1&sc=7) ||백엔드|📤 서류제출|||
@@ -209,56 +211,56 @@
 |70|154|2024 05 10|[에스엠인터네셔널](https://www.jobkorea.co.kr/Recruit/GI_Read/44444050?Oem_Code=C1&sc=26) ||디저트39 웹앱 서비스 기획|📤 서류제출|||
 
 
-0/10
+1/10
 
 
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
 |71|155|2024 07 02|[엠게임](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44609800?Oem_Code=C1) ||웹개발자|📤 서류제출|||
 |72|156|2024 06 10|[누리플러스](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44604410?Oem_Code=C1) ||소프트웨어 개발|📤 서류제출|||
-|73|157|2024 05 09|[SK 쉴더스](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44604137?Oem_Code=C1) ||프론트엔드 경력 2년, OSS 업무 시스템 개발자 채용 (~5/9)|📤 서류제출|||
+|73|157|2024 05 09|[SK 쉴더스](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44604137?Oem_Code=C1) ||프론트엔드 경력 2년, OSS 업무 시스템 개발자 채용 (~5/9)|❌📤 서류 탈락|||
 |-|158|2024 05 05|[아시아나IDT](https://asianaidt.recruiter.co.kr/appsite/company/index) ||시스템 운영, 경력2년|❌ 미지원|||
 |-|159|2024 05 05|[투비소프트](https://www.jobkorea.co.kr/Recruit/GI_Read/44395286?Oem_Code=C1&sc=15) ||이커머스|❌ 미지원|||
 |-|160|2024 05 05|[현대자동차 GIT](https://www.jobkorea.co.kr/Recruit/GI_Read/44531120?Oem_Code=C1&sc=7) |||❌ 미지원|||
-|74|161|2024 05 06|[이지케어택](https://ezcaretech.career.greetinghr.com/o/109146) ||의료IT|📤 서류제출|||
-|-|162|2024 05 06|[도미노피자](https://www.jobkorea.co.kr/Recruit/GI_Read/44300917?GI_No=46633416) |||❌ 미지원| 경력 3~5년||
-|75|163|2024 05 06|[하나펀드서비스](https://www.jobkorea.co.kr/Recruit/GI_Read/44524415?Oem_Code=C1&sc=7) ||어플리케이션아키텍쳐|📤 서류제출|||
+|74|161|2024 05 06|⭐️[이지케어택](https://ezcaretech.career.greetinghr.com/o/109146) ||의료IT|👨‍👨‍👦 1차 면접|||
+|75|162|2024 05 03|⭐️[이지케어택](https://www.jobkorea.co.kr/Recruit/GI_Read/44490489?Oem_Code=C1&sc=7) ||의료 sw|👨‍👨‍👦 1차 면접|||
+|-|163|2024 05 06|[도미노피자](https://www.jobkorea.co.kr/Recruit/GI_Read/44300917?GI_No=46633416) |||❌ 미지원| 경력 3~5년||
 |-|164|2024 05 06|[경동나비엔](https://recruit.kdfamily.co.kr/) ||R&D IOT 서버 백엔드, 구로|❌ 미지원|||
 |-|165|2024 05 06|[이랜드 이노플](https://careers.eland.co.kr/announce/recruit/hxCcG2wOtfklvYj5Zmea5XtMDw8P) ||외식 시스템 개발 및 운영|❌ 미지원|||
 |-|166|2024 05 06|[슈피겐 코리아](https://career.spigenkorea.co.kr/) ||웹개발|❌ 미지원|||
-|76|167|2024 05 07|[NH투자증권](https://nhqv-recruit2024.com/?utm_source=jas01&utm_campaign=nh2024up) ||IT|🤖 AI역량검사|||
+|76|167|2024 05 07|⭐️[NH투자증권](https://nhqv-recruit2024.com/?utm_source=jas01&utm_campaign=nh2024up) ||IT|🤖 AI역량검사|||
 |-|168|2024 05 07|[한국예탁결제원](https://ksd.saramin.co.kr/service/ksd/3136/applicant/apply/recruit_default.asp) |공기업|IT|❌ 미지원|||
 |-|169|2024 05 07|[선진,하림](https://recruit-sj.com/?utm_source=jasoseol&utm_medium=recruit_banner&utm_campaign=202401) ||웹개발 2~5년 경력|❌ 미지원|그냥 안 꼴려서||
-|77|170|2024 05 08|[크림 KREAM](https://recruit.snowcorp.com/rcrt/view.do?annoId=30002064&sw=&subJobCdArr=&sysCompanyCdArr=KRM&empTypeCdArr=&entTypeCdArr=&workAreaCdArr=) ||Payment&Infra 체험형 인턴|📤 서류제출|||
+|77|170|2024 05 06|[하나펀드서비스](https://www.jobkorea.co.kr/Recruit/GI_Read/44524415?Oem_Code=C1&sc=7) ||어플리케이션아키텍쳐|📤 서류제출|||
 |-|171|상시|[넥슨](https://career.nexon.com/user/recruit/member/postDetail?joinCorp=NX&reNo=20230283&currentPage=0) |대|프론트엔드 UI|❌ 미지원|마감, 게으름||
 |-|172|상시|[티맥스티베로](https://tmaxcareers.ninehire.site/) ||웹서비스 프론트엔드 연구원|❌ 미지원|마감, 게으름||
-|||2024 05 10|[LX MMA](https://apply.lxcareers.com/app/job/RetrieveJobNoticesDetail.rpi?jobNoticeId=16128) ||it infra||필수 영어 성적||
-|||2024 05 09|[엔테크서비스](https://job.incruit.com/jobdb_info/jobpost.asp?job=2404090000122) |||❌ 미지원|마감, 게으름||
-|||2024 05 10|[한국교육환경보호원](https://job.incruit.com/jobdb_info/jobpost.asp?job=2404300003125) |||❌ 미지원|||
-|||2024 05 10|[드림라인](https://www.saramin.co.kr/zf_user/jobs/view?rec_idx=47975816&view_type=etc&ref=recruit_manage) ||클라우드 엔지니어, 웹이 있음|❌ 미지원|||
-|||2024 05 12|[휠라 홀딩스](https://www.filaholdings.com/kr/main/index.asp) ||웹개발|📤 서류제출|||
-|||2024 05 14|[스포츠토토코리아](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405080000333&handle=&rf=1) ||만2년 이상, 투표권개발팀|❌ 미지원|||
-|||2024 05 14|[한국투자증권](https://career.koreainvestment.com/announcementList) |||❌ 미지원|||
-|||2024 05 12|[세아상역](https://careers.sae-a.com/) ||IT|❌ 미지원|||
-|||2024 05 12|[MBC](https://imbc.career.greetinghr.com/recruit) ||웹서버 개발|❌ 미지원|||
-|||2024 05 13|[우체국금융개발원](https://recruit.posid.or.kr/) ||공고는 인크루트, 체크카드업무 IT 지원|❌ 미지원|||
-|||2024 05 13|[한국공항공사](https://airport.cairos.co.kr/airport/1226/Recruit/RecruitView.aspx) ||전산|❌ 미지원|||
+|-|173|2024 05 10|[LX MMA](https://apply.lxcareers.com/app/job/RetrieveJobNoticesDetail.rpi?jobNoticeId=16128) |❌ 미지원|it infra||필수 영어 성적||
+|-|174|2024 05 09|[엔테크서비스](https://job.incruit.com/jobdb_info/jobpost.asp?job=2404090000122) |||❌ 미지원|마감, 게으름||
+|-|175|2024 05 10|[한국교육환경보호원](https://job.incruit.com/jobdb_info/jobpost.asp?job=2404300003125) |||❌ 미지원|||
+|-|176|2024 05 10|[드림라인](https://www.saramin.co.kr/zf_user/jobs/view?rec_idx=47975816&view_type=etc&ref=recruit_manage) ||클라우드 엔지니어, 웹이 있음|❌ 미지원|||
+|78|177|2024 05 12|[휠라 홀딩스](https://www.filaholdings.com/kr/main/index.asp) ||웹개발|📤 서류제출|||
+|-|178|2024 05 14|[스포츠토토코리아](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405080000333&handle=&rf=1) ||만2년 이상, 투표권개발팀|❌ 미지원|||
+|-|179|2024 05 14|[한국투자증권](https://career.koreainvestment.com/announcementList) |||❌ 미지원|||
+|-|180|2024 05 12|[세아상역](https://careers.sae-a.com/) ||IT|❌ 미지원|||
+|-|181|2024 05 12|[MBC](https://imbc.career.greetinghr.com/recruit) ||웹서버 개발|❌ 미지원|||
+|-|182|2024 05 13|[우체국금융개발원](https://recruit.posid.or.kr/) ||공고는 인크루트, 체크카드업무 IT 지원|❌ 미지원|||
+|-|183|2024 05 13|[한국공항공사](https://airport.cairos.co.kr/airport/1226/Recruit/RecruitView.aspx) ||전산|❌ 미지원|||
+|-|184|2024 05 15|[에코마케팅](https://echomarketing.career.greetinghr.com/o/110818) ||백엔드 python||||
+|79|185||[로젠]() |||❌📤 서류 탈락|||
+|80|186|2024 05 14|[모두투어](https://www.jobkorea.co.kr/Recruit/GI_Read/44231866?Oem_Code=C1) ||웹개발 경력 3년|📤 서류제출|||
 
 
-|||상시|[토스](https://toss.im/career/apply/basic/4103014003) ||IT Supotter 계약직 3개월, 컴퓨터 환경 구축||||
-
-
-
-
-
+3/10
 
 
 
-|||2024 05 15|[중앙대학교병원광명점](https://caumc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180687) ||의료정보팀, RPA||||
-|||2024 05 15|[에코마케팅](https://echomarketing.career.greetinghr.com/o/110818) ||백엔드 python||||
-|||2024 05 16|[케이뱅크](https://inthiswork.com/archives/118787) ||프론트엔드||||
-|||2024 05 16|[전북은행](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405030001195&handle=48250FBD2E7FAA1ABAE691872601039F85DF34FC3DA36E158CCEAF0DAE62FB8B) ||경력직 대리급 이하, IT||||
-|||2024 05 17|[신용보증재간중앙회](https://job.incruit.com/entry/jobpost.asp?job=2404300004694) ||||||
+| No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
+|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
+||187|상시|[토스](https://toss.im/career/apply/basic/4103014003) ||IT Supotter 계약직 3개월, 컴퓨터 환경 구축||||
+|81|188|2024 05 15|⭐️[중앙대학교병원광명점](https://caumc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180687) ||의료정보팀 행정직, RPA|🤖 AI역량검사|||
+|-|189|2024 05 16|[전북은행](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405030001195&handle=48250FBD2E7FAA1ABAE691872601039F85DF34FC3DA36E158CCEAF0DAE62FB8B) ||경력직 대리급 이하, IT 17시|❌ 미지원|||
+|-|190|2024 05 16|[케이뱅크](https://inthiswork.com/archives/118787) ||프론트엔드 24시|❌ 미지원|||
+|-|191|2024 05 17|[신용보증재간중앙회](https://job.incruit.com/entry/jobpost.asp?job=2404300004694) |||❌ 미지원|||
 
 
 
@@ -291,8 +293,6 @@
 
 
 
-||||[]() ||||||
-||||[]() ||||||
 ||||[]() ||||||
 ||||[]() ||||||
 ||||[]() ||||||
