--- a/_posts/Resume/recent/2024-05-06-이지케어택.md
+++ b/_posts/Resume/recent/2024-05-06-이지케어택.md
@@ -1,5 +1,5 @@
 
-
+[공고](https://www.jobkorea.co.kr/Recruit/GI_Read/44490489?Oem_Code=C1&sc=7)
 
 의료 IT
 
@@ -8,7 +8,6 @@
 ## 지원동기 1000자
 (나머지는 pdf 파일 첨부)
 
-
 - 666
 [이지케어텍에서 더 나은 의료 서비스 지원]
 저의 직업관은 가지고 있는 기술과 경험을 어떻게 사회에 기여할 수 있느냐 입니다. 이지케어택에서 의료IT 분야에 관련하여 환자 혹은 의료진에게 더 나은 서비스를 제공할 수 있도록 돕고싶습니다.
@@ -16,5 +15,9 @@
 최근 림프종 진단을 위해 병원을 방문한 경험이 있습니다. 진료를 대기하면서, 간단한 UI의 키오스크가 있음에도 나이가 드신 분들은 간호사에게 물어보는 것을 선호한다는 점을 발견했습니다. 제가 가진 기술적 지식과 프로젝트 관리 경험을 활용하여 이지케어택에서 이러한 기술적 배경을 바탕으로, 효율적이고 안정적인 시스템 개발을 지원함으로서 이러한 환자도 쉽게 접근하여 진료를 받을 수 있게 기여하고 싶어 지원하였습니다.
 
 인턴으로 입사 후에는 처음 2주 동안, 이지케어택의 소스코드 분석 및 구조를 엑셀 파일에 정리하면서 사업의 방향성 및 업무에 대해 파악하겠습니다. 이후엔 가르칠 필요없이 최소한의 가이드라인 만 주신다면, 주시는 업무에 최선을 다해 진행하겠습니다.
-이후 2개월 간, 팀원과 동화된 모습을 보여드리면서, 계약기간 동안 기존에 작성된 레거시 코드나 앞으로 있을 개발 부문에 오류나 보안사항을 준수하며, 맡은 역할에서 성과가 날 수 있게, 꼼꼼하게 수행하면서 마지막 날까지 새로운 기회를 얻을 수 있도록 최선을 다해 인턴 기간을 마치겠습니다.
+이후 2개월 간, 팀원과 동화된 모습을 보여드리면서, 계약기간 동안 기존에 작성된 레거시 코드**나** 앞으로 있을 개발 부문에 오류나 보안사항을 준수하며, 맡은 역할에서 성과가 날 수 있게, 꼼꼼하게 수행하면서 마지막 날까지 새로운 기회를 얻을 수 있도록 최선을 다해 인턴 기간을 마치겠습니다.
+
+
+# 오케이 5월 14일 합격
+
 
