--- a/_posts/Resume/recent/2024-05-16-중앙대학교병원.md
+++ b/_posts/Resume/recent/2024-05-16-중앙대학교병원.md
@@ -30,34 +30,49 @@
 
 # 자기소개서
 ## 성장과정 500
+- 498
+[기회는 책임감에서]
+군대에서 부모님의 보살핌에 보답하고자 스스로 점진적으로 목표를 세워 변화를 주게 되었습니다.
 
+우선, 어학연수 계획을 세워, 휴가를 얻는 활동에 적극 참여하여, 중대에 가장 휴가를 많이 보유한 사람으로 3위라는 기록을 세웠습니다. 그 덕에 휴가 중, 단기 아르바이트를 통해 일정 금액을 모아 전역 후, 어학연수를 갈 수 있는 기회를 얻었습니다.
+두 번째로, 대학교에서 근로로 참여해 책임감을 가지고 일에 임하였습니다. 저는 야간 대학교를 나와 주간 수업에는 참여할 수 없습니다. 그러나 주변 교직원분들의 추천으로 수업 도우미로 참여할 수 있게 되었고, 수업의 질을 올리기 위해 최선을 다한 결과 교수님을 만족시키면서, 다양한 기회를 얻었습니다.
+
+지난 경험에서 책임감을 가지고 일을 끝까지 해낸다면, 인정을 받고 추천되어, 더 많은 기회가 주어진다는 것을 배웠습니다.이러한 가치관을 통해 중앙대학교광명병원에서 책임감을 가지고 일에 임하여 더 많은 기회를 얻고 싶습니다.
 
 
 ## 장단점 500
+- 500
+[신속한 학습과 적응력을 가진 개발자입니다.]
+공공기관 SI에서 다양한 코드 분석과 촉박한 개발 기간 동안 결과물을 가져와야 했던 근무 경험이 있습니다. 이러한 경험을 바탕으로 누군가가 저를 가르치는 인력을 줄일 수 있으며, 스스로 소스코드를 분석하고 파악하여, 업무에 보다 빠르게 적응할 자신이 있습니다. 신입으로서 작게나마 인력 소비를 줄여, 기술적 해결책을 제공함으로서, 사용자 만족도에 보다 빠르게 기여하는게 제 현실적 장점입니다.
+
+[혁신적인 문제 해결사라고 표현하고 싶습니다.]
+단점은 궁금한 점이 있으면 작게라도 직접 경험해야 하는 성격을 가지고 있습니다. 이로 인해 때때로 새로운 기술이나 방법에 추가적인 시간을 할애해야 하는 경우가 있습니다. 그러나 직접 손으로 무언가를 해보면서 얻은 지식은 훨씬 오래 지속되며, 다양한 지식은 저를 혁신적인 문제 해결사로 만들어줍니다.
+
+이런 경험에서 얻은 장점과 단점을 적절하게 이용하여 회사에 보다 빠르게 적응해 성과를 이뤄내 나가겠습니다.
+
+
 
 
 
 ## 지원동기 및 포부 500
+- 500
 [중앙대학교광명병원에서 더 나은 의료 서비스 지원]
-최근 두달 간 중앙대학교광명병원에서 진료하며, 의사 분들이 사용하는 화면의 UI를 유심히 지켜봤습니다. 저런 화면이 있다면 의사의 업무 효율성 증가 뿐만 아니라 환자 입장에서 이해하기도 쉬울 거라는 생각이 들어 만들어보고 싶었습니다. 이번 공고를 확인하자마자 기회라 생각되어 즉시 DJango를 바탕으로, 간단하게 이미지를 전처리할 수 있는 RSA 개발을 해보았습니다.
+최근 두달 간 중앙대학교광명병원에서 진료하며, 병원과 의사 분들이 사용하는 화면의 UI를 유심히 지켜봤습니다. 그 중 의사분들이 사용하는 프로그램은 업무 효율성 증가 뿐만 아니라 환자의 정확한 진단에 도움이 될 것이란 생각이 들어 찾아봤습니다. Blue Prism이라는 회사의 소프트웨어를 사용한다는 점을 발견했습니다. 이번 공고를 확인하자마자 기회라 생각되어 즉시 DJango를 바탕으로, 접수증에 있는 개인정보를 DB에 그대로 넣고, 접수증 바코드를 읽어, 등록번호로 진료 접수 기능을 구현 해보았습니다.
 
-저의 직업관은 가지고 있는 기술과 경험을 어떻게 사회에 기여할 수 있느냐 입니다. 의료IT 분야에 관련하여 의료진의 업무 효율성을 올려 환자에게 더 나은 진료 과정을 제공할 수 있도록 돕고싶습니다. 제가 가진 기술적 지식과 프로젝트 관리 경험을 활용하여 중앙대학교광명병원에서 효율적이고 안정적인 시스템 개발을 지원함으로서 의사 뿐만 아니라 아픈 환자도 쉽게 진료를 이해할 수 있게 하고싶어 지원하였습니다.
-
-
+저의 직업관은 가지고 있는 기술과 경험을 어떻게 사회에 기여할 수 있느냐 입니다. 제가 가진 기술적 지식과 프로젝트 관리 경험을 활용하여 중앙대학교광명병원에서 의료IT의 효율적이고 안정적인 시스템을 지원함으로서 의료진의 업무 효율성을 올려, 의사 뿐만 아니라 환자에게도 더 나은 진료 과정을 제공할 수 있도록 돕고싶어 지원하였습니다.
 
 
 
-
-
-- 666
-[이지케어텍에서 더 나은 의료 서비스 지원]
-저의 직업관은 가지고 있는 기술과 경험을 어떻게 사회에 기여할 수 있느냐 입니다. 이지케어택에서 의료IT 분야에 관련하여 환자 혹은 의료진에게 더 나은 서비스를 제공할 수 있도록 돕고싶습니다.
-
-최근 림프종 진단을 위해 병원을 방문한 경험이 있습니다. 진료를 대기하면서, 간단한 UI의 키오스크가 있음에도 나이가 드신 분들은 간호사에게 물어보는 것을 선호한다는 점을 발견했습니다. 제가 가진 기술적 지식과 프로젝트 관리 경험을 활용하여 이지케어택에서 이러한 기술적 배경을 바탕으로, 효율적이고 안정적인 시스템 개발을 지원함으로서 이러한 환자도 쉽게 접근하여 진료를 받을 수 있게 기여하고 싶어 지원하였습니다.
-
-인턴으로 입사 후에는 처음 2주 동안, 이지케어택의 소스코드 분석 및 구조를 엑셀 파일에 정리하면서 사업의 방향성 및 업무에 대해 파악하겠습니다. 이후엔 가르칠 필요없이 최소한의 가이드라인 만 주신다면, 주시는 업무에 최선을 다해 진행하겠습니다.
-이후 2개월 간, 팀원과 동화된 모습을 보여드리면서, 계약기간 동안 기존에 작성된 레거시 코드**나** 앞으로 있을 개발 부문에 오류나 보안사항을 준수하며, 맡은 역할에서 성과가 날 수 있게, 꼼꼼하게 수행하면서 마지막 날까지 새로운 기회를 얻을 수 있도록 최선을 다해 인턴 기간을 마치겠습니다.
 
 ## 경력 500
 
+- 471
+ 메타넷디지털에서 1년 간 공공기관 SI 웹개발자로 근무하며, 저는 공공기관 금융 기술 분야에서 중요한 경험을 쌓고 다수의 성공적인 프로젝트를 이끌었습니다. 신입으로 들어갔기 때문에 지방세외수입, 레저세, 지역자원시설세 등 주로 법 개정이 적은 항목을 담당하여 개발 및 유지보수를 진행하였습니다. 특히, 지방세외수입에 고객정보를 가지고 있는 API를 활용한 실명인증 기능 개발과 재산세(세율특례) 자동계산기 기능 개선 프로젝트에서 주도적인 역할을 맡아, 고객사의 만족도를 향상시키면서, 회사의 경쟁력을 강화하는데 기여했습니다.
 
+ 또한 공무원분들의 시스템적 문의가 오기 때문에 각 세목에 필요한 업무를 숙지하고, 리눅스를 활용하여, Web Log 데이터를 모니터링 하거나 DB에 값이 제대로 들어갔는지 확인했습니다. 문제 발견 시에는 SQL 쿼리를 작성하여 실행 권한이 있는 상급자에게 부탁하거나 소스코드를 개선하여 해결하는 업무를 맡았습니다.
+
+
+
+ # AI역검
+ 합격ㅋㅌ
+ 
