--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -155,7 +155,7 @@
 |-|114|2024 04 21|[NH선물](http://ir.futures.co.kr/ir/Getcontent.do?content=4000012) ||IT부문,서버 프로그래밍|❌ 미지원|13시 마감|||
 |-|115|2024 04 21|[셀트리온](https://recruit.celltrion.com/main/recruit/46_3/index.jsp) ||어플리케이션|❌ 미지원|||
 |-|116|2024 04 22|[NH농협은행](https://nhbank2024.saramin.co.kr/service/nhbank2024/index.asp) ||17시까지 |❌ 미지원|블록체인,데사,보안,AI||
-|-|117|2024 04 22|[DGB생명보험](https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=47980337&view_type=search) ||18시, IT직군|한글파일을 볼 수 가 없다.|||
+|-|117|2024 04 22|[DGB생명보험](https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=47980337&view_type=search) ||18시, IT직군|❌ 미지원|한글파일을 볼 수 가 없다.||
 |-|118|2024 04 22| [한국재정정보원]()|||❌ 미지원|||
 |-|119|2024 04 22|[우리금융저축은행](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44448512?Oem_Code=C1) ||24시, 1년차 ,디지털추진기획|❌ 미지원|||
 |-|120|2024 04 22|[비나우](https://benow.career.greetinghr.com/o/87391) ||24시, ux/ui 5400만원의 자신감||||
@@ -167,13 +167,14 @@
 |-|126|2024 04 28|[인바디](https://www.inbodyrecruit.com/) ||AOS|❌ 미지원|||
 |46|127|2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695?utm_source=jasoseol&utm_medium=banner&utm_campaign=2404hdclabs) |대|라눅스 인프라개발 및 운영 부문|❌📤 서류 탈락|||
 |-|128|2024 05 02|[동원그룹](https://careers.dongwon.com/Recruit/Detail/1294538?p=iyNfKrdnmP2qvRp8eLoBoZUpoAd7oXoMRF~univ~qHHbyt3iKt8daueOf4L73r4u/JYOmXuNw3JjRTEtpR5tnhbU~univ~CWg0nAO5i9tIT7P0kOt6hpLUYDNquLubJDLueuz0tviL1oUDuAe4GPRhG1jVAiqBdQTYBGNx8CwtJirbzXrwGnM=) ||웹개발|❌ 미지원|||
-|47|129|상시|[컴투스](https://com2us.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180246) ||산후대체, 웹개발|📤 서류제출|||
+|47|129|상시|[컴투스](https://com2us.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180246) ||산후대체, 웹개발|❌📤 서류 탈락|||
 |48|130|2024 05 24|[좋은생각](https://www.jobkorea.co.kr/Recruit/GI_Read/44541625?Oem_Code=C1) |중소|리액트 경력|📤 서류제출|||
 |49|131|2024 05 02|[메가스터디교육](https://www.jobkorea.co.kr/Recruit/GI_Read/44393033?Oem_Code=C1) ||공무원 웹개발자|📤 서류제출|||
 |50|132|2024 05 15|⭐️[크래디트나인](https://www.jobkorea.co.kr/Recruit/GI_Read/44458763?Oem_Code=C1) |중소|금융 SI|❌👨‍👨‍👦 1차 면접 미참석|||
 
+
 1/10
-암 검사하느라 정말 정신 없이 지냈음. 
+암 검사하느라 정말 정신 없이 지냈음.
 
 
 
@@ -183,7 +184,7 @@
 |52|134|2024 05 17|[케이지이니시스](https://www.jobkorea.co.kr/Recruit/GI_Read/44479447?Oem_Code=C1&sc=15) ||결제 서비스|📤 서류제출|||
 |53|135|2024 05 16|[한일네트워크](https://www.jobkorea.co.kr/Recruit/GI_Read/44609695?Oem_Code=C1) ||경력 3년, 웹개발자|📤 서류제출|||
 |54|136|2024 06 23|[BCD](https://www.jobkorea.co.kr/Recruit/GI_Read/44539587?Oem_Code=C1) |중소|이커머스, 경력1년|📤 서류제출|||
-|55|137|2024 05 10|[동국시스템즈](https://www.jobkorea.co.kr/Recruit/GI_Read/44581737?Oem_Code=C1&sc=7) |중견|웹개발자, 내부시스템|📤 서류제출|||
+|55|137|2024 05 10|⭐️[동국시스템즈](https://www.jobkorea.co.kr/Recruit/GI_Read/44581737?Oem_Code=C1&sc=7) |중견|웹개발자, 내부시스템|🤖 AI역량검사|||
 |56|138|상시|[DB FIS](https://www.jobkorea.co.kr/Recruit/GI_Read/44189056?Oem_Code=C1&sc=7) ||경력 2년 |📤 서류제출|||
 |57|139|2024 05 03|[에스엠 하이플러스](https://www.jobkorea.co.kr/Recruit/GI_Read/44557239?Oem_Code=C1&sc=7) ||금융 전산|📤 서류제출|||
 |58|140|2024 05 08|[크림 KREAM](https://recruit.snowcorp.com/rcrt/view.do?annoId=30002064&sw=&subJobCdArr=&sysCompanyCdArr=KRM&empTypeCdArr=&entTypeCdArr=&workAreaCdArr=) ||Payment&Infra 체험형 인턴|❌📤 서류 탈락|||
@@ -192,12 +193,12 @@
 
 
 잡코리아 즉시지원 9개에 + 크림
-0/10
+1/10
 
 
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
-|61|143||⭐️[크리스피드](https://www.jobkorea.co.kr/Recruit/GI_Read/44566787?Oem_Code=C1&sc=7) |중소|송파, 웹개발자|👨‍👨‍👦 1차 면접|||
+|61|143||⭐️[크리스피드](https://www.jobkorea.co.kr/Recruit/GI_Read/44566787?Oem_Code=C1&sc=7) |중소|송파, 웹개발자|❌👨‍👨‍👦 1차 면접 미참석|송파구+pt 발표||
 |62|144|2024 06 23|[천재교과서](https://www.jobkorea.co.kr/Recruit/OnPass/OnPassResult?gNo=44538065&R_No=25480631&PartIdx=35229570&sc=7) ||백엔드|📤 서류제출|||
 |63|145|2024 05 21|[신라 스테이](https://www.jobkorea.co.kr/Recruit/GI_Read/44483947?Oem_Code=C1&sc=7) ||전산|📤 서류제출|||
 |64|146|2024 05 08|[현대HT](https://www.jobkorea.co.kr/Recruit/GI_Read/44437247?Oem_Code=C1&sc=7) ||백엔드|📤 서류제출|||
@@ -228,7 +229,7 @@
 |-|164|2024 05 06|[경동나비엔](https://recruit.kdfamily.co.kr/) ||R&D IOT 서버 백엔드, 구로|❌ 미지원|||
 |-|165|2024 05 06|[이랜드 이노플](https://careers.eland.co.kr/announce/recruit/hxCcG2wOtfklvYj5Zmea5XtMDw8P) ||외식 시스템 개발 및 운영|❌ 미지원|||
 |-|166|2024 05 06|[슈피겐 코리아](https://career.spigenkorea.co.kr/) ||웹개발|❌ 미지원|||
-|76|167|2024 05 07|⭐️[NH투자증권](https://nhqv-recruit2024.com/?utm_source=jas01&utm_campaign=nh2024up) ||IT|🤖 AI역량검사|||
+|76|167|2024 05 07|⭐️[NH투자증권](https://nhqv-recruit2024.com/?utm_source=jas01&utm_campaign=nh2024up) ||IT|❌🤖 AI역량검사 탈락|||
 |-|168|2024 05 07|[한국예탁결제원](https://ksd.saramin.co.kr/service/ksd/3136/applicant/apply/recruit_default.asp) |공기업|IT|❌ 미지원|||
 |-|169|2024 05 07|[선진,하림](https://recruit-sj.com/?utm_source=jasoseol&utm_medium=recruit_banner&utm_campaign=202401) ||웹개발 2~5년 경력|❌ 미지원|그냥 안 꼴려서||
 |77|170|2024 05 06|[하나펀드서비스](https://www.jobkorea.co.kr/Recruit/GI_Read/44524415?Oem_Code=C1&sc=7) ||어플리케이션아키텍쳐|📤 서류제출|||
@@ -257,12 +258,14 @@
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
 ||187|상시|[토스](https://toss.im/career/apply/basic/4103014003) ||IT Supotter 계약직 3개월, 컴퓨터 환경 구축||||
-|81|188|2024 05 15|⭐️[중앙대학교병원광명점](https://caumc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180687) ||의료정보팀 행정직, RPA|🤖 AI역량검사|||
+|81|188|2024 05 15|⭐️[중앙대학교병원광명점](https://caumc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180687) ||의료정보팀 행정직, RPA|👨‍👨‍👦 1차 면접|||
 |-|189|2024 05 16|[전북은행](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405030001195&handle=48250FBD2E7FAA1ABAE691872601039F85DF34FC3DA36E158CCEAF0DAE62FB8B) ||경력직 대리급 이하, IT 17시|❌ 미지원|||
 |-|190|2024 05 16|[케이뱅크](https://inthiswork.com/archives/118787) ||프론트엔드 24시|❌ 미지원|||
 |-|191|2024 05 17|[신용보증재간중앙회](https://job.incruit.com/entry/jobpost.asp?job=2404300004694) |||❌ 미지원|||
-
-
+|||2024 05 19|[한미약품](https://hanmi.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180471) ||웹개발|❌ 미지원|||
+|||2024 05 19|[안랩](https://ahnlab.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180229) ||웹개발|❌ 미지원|||
+|||2024 05 22|[AJ네트워크](https://ajnet.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180280) ||경력 3년|❌ 미지원|||
+|||2024 05 22|[엔지니어링공제조합](https://www.egic.co.kr/e/hp/business/openHireIntro.do) ||IT, 3월19일에 올라왔었는데 또?|❌ 미지원|||
 
 
 
@@ -276,14 +279,6 @@
 
 
 
-
-16일 목
-|||2024 05 19|[한미약품](https://hanmi.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180471) ||웹개발||||
-|||2024 05 19|[안랩](https://ahnlab.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180229) ||웹개발||||
-
-17일 금
-|||2024 05 22|[AJ네트워크](https://ajnet.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180280) ||경력 3년||||
-|||2024 05 22|[엔지니어링공제조합](https://www.egic.co.kr/e/hp/business/openHireIntro.do) ||IT, 3월19일에 올라왔었는데 또?||||
 
 |||2024 05 26|[우리은행](https://job.incruit.com/entry/jobpost.asp?job=2405030005284) ||디지털 제휴, 경력직 스멜||||
 
