--- a/_posts/Resume/recent/2024-05-16-중앙대학교병원.md
+++ b/_posts/Resume/recent/2024-05-16-중앙대학교병원.md
@@ -40,6 +40,7 @@
 지난 경험에서 책임감을 가지고 일을 끝까지 해낸다면, 인정을 받고 추천되어, 더 많은 기회가 주어진다는 것을 배웠습니다.이러한 가치관을 통해 중앙대학교광명병원에서 책임감을 가지고 일에 임하여 더 많은 기회를 얻고 싶습니다.
 
 
+
 ## 장단점 500
 - 500
 [신속한 학습과 적응력을 가진 개발자입니다.]
@@ -52,8 +53,6 @@
 
 
 
-
-
 ## 지원동기 및 포부 500
 - 500
 [중앙대학교광명병원에서 더 나은 의료 서비스 지원]
@@ -63,16 +62,54 @@
 
 
 
-
 ## 경력 500
-
 - 471
- 메타넷디지털에서 1년 간 공공기관 SI 웹개발자로 근무하며, 저는 공공기관 금융 기술 분야에서 중요한 경험을 쌓고 다수의 성공적인 프로젝트를 이끌었습니다. 신입으로 들어갔기 때문에 지방세외수입, 레저세, 지역자원시설세 등 주로 법 개정이 적은 항목을 담당하여 개발 및 유지보수를 진행하였습니다. 특히, 지방세외수입에 고객정보를 가지고 있는 API를 활용한 실명인증 기능 개발과 재산세(세율특례) 자동계산기 기능 개선 프로젝트에서 주도적인 역할을 맡아, 고객사의 만족도를 향상시키면서, 회사의 경쟁력을 강화하는데 기여했습니다.
+메타넷디지털에서 1년 간 공공기관 SI 웹개발자로 근무하며, 저는 공공기관 금융 기술 분야에서 중요한 경험을 쌓고 다수의 성공적인 프로젝트를 이끌었습니다. 신입으로 들어갔기 때문에 지방세외수입, 레저세, 지역자원시설세 등 주로 법 개정이 적은 항목을 담당하여 개발 및 유지보수를 진행하였습니다. 특히, 지방세외수입에 고객정보를 가지고 있는 API를 활용한 실명인증 기능 개발과 재산세(세율특례) 자동계산기 기능 개선 프로젝트에서 주도적인 역할을 맡아, 고객사의 만족도를 향상시키면서, 회사의 경쟁력을 강화하는데 기여했습니다.
 
- 또한 공무원분들의 시스템적 문의가 오기 때문에 각 세목에 필요한 업무를 숙지하고, 리눅스를 활용하여, Web Log 데이터를 모니터링 하거나 DB에 값이 제대로 들어갔는지 확인했습니다. 문제 발견 시에는 SQL 쿼리를 작성하여 실행 권한이 있는 상급자에게 부탁하거나 소스코드를 개선하여 해결하는 업무를 맡았습니다.
+또한 공무원분들의 시스템적 문의가 오기 때문에 각 세목에 필요한 업무를 숙지하고, 리눅스를 활용하여, Web Log 데이터를 모니터링 하거나 DB에 값이 제대로 들어갔는지 확인했습니다. 문제 발견 시에는 SQL 쿼리를 작성하여 실행 권한이 있는 상급자에게 부탁하거나 소스코드를 개선하여 해결하는 업무를 맡았습니다.
 
 
 
- # AI역검
- 합격ㅋㅌ
+# AI역검
+합격ㅋㅌ
  
+
+## 1분자기소개
+안녕하세요, ______의 _____부문에 지원한 김용록입니다. 
+
+[1부 내 이야기]
+저는 군대 시절 점진적인 변화를 위해 목표를 세워 달성해보고, 
+대학교에서는 근로와 수업 도우미 
+활동을 통해서 책임감을 키웠습니다.
+
+지난 회사에선 공공기관 SI 프로젝트에서 신속한 학습과 적응력을 발휘하여 성과를 냈었고,
+다양한 경험을 통해 혁신적인 문제 해결사로 성장할 수 있었습니다. 
+
+
+[2부 실제 경험]
+제가 이번에 중앙대학교광명병원에서 진료를 받아 보니까
+가족의 걱정을 많이 받았습니다.
+
+그 과정에서 의료 서비스의 질이 향상된다는 건
+
+환자들이나 본인 가족의 
+건강에 대해서 걱정을 덜게해 줄 거라는 생각을 했었습니다.
+
+
+[3부 지원동기]
+평소에 병원의 IT 시스템을 유심히 봤었습니다.
+이번 공고를 확인하자 마자, 
+Django 기반의 진료 접수 기능을 작게나마 구현해봤습니다.
+
+이러한 경험을 바탕으로 중앙대학교광명병원에서 더 나은 진료 환경을 제공함으로서 
+환자들에게 사회적 안정감과 삶의 질을 높이는데 기여하고 싶습니다.
+
+w
+## 
+직업선택 기준
+
+w
+
+직업 선택할 때 안 중요한 거
+- 시방ㄹ
+관심사
