--- a/_posts/Resume/recent/2024-05-06-이지케어택.md
+++ b/_posts/Resume/recent/2024-05-06-이지케어택.md
@@ -3,6 +3,8 @@
 
 의료 IT
 
+서울대 병원 계열사
+
 
 # 자기소개서
 ## 지원동기 1000자
@@ -19,5 +21,45 @@
 
 
 # 오케이 5월 14일 합격
+인적성 평가
+
+# 5월 22일 면접
+아 이 회사는 내가 낸 지원서를 조회할 수 가 없네
+내가 무슨 pdf를 넣었을까?
+
+이력서랑 자기소개서 넣었을 거 같은데,,,, 거기 과장된 거 지우고 넣었을까?
+
+
+
+## 1분자기소개
+안녕하세요, ______의 _____부문에 지원한 김용록입니다. 
+
+[1부 내 이야기]
+저는 군대 시절 점진적인 변화를 위해 목표를 세워 달성해보고, 
+대학교에서는 근로와 수업 도우미 
+활동을 통해서 책임감을 키웠습니다.
+
+지난 회사에선 공공기관 SI 프로젝트에서 신속한 학습과 적응력을 발휘하여 성과를 냈었고,
+다양한 경험을 통해 혁신적인 문제 해결사로 성장할 수 있었습니다. 
+
+
+[2부 실제 경험]
+제가 이번에 병원에서 진료를 받아 보니까
+가족의 걱정을 많이 받았습니다.
+
+그 과정에서 의료 서비스의 질이 향상된다는 건
+
+환자들이나 본인 가족의 
+건강에 대해서 걱정을 덜게해 줄 거라는 생각을 했었습니다.
+
+
+[3부 지원동기]
+제가 가진 프로젝트 관리 경험을 바탕으로 _______에서 더 나은 진료 환경을 제공함으로서 
+환자들에게 사회적 안정감과 삶의 질을 높이는데 기여하고 싶습니다.
+
+
+## 코딩테스트 및 직무 적합성 평가????
+이메일을 보니 그런 내용이 있던데?
+뭐지,,,, 준비 아에 안했는데
 
 
