--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -181,7 +181,7 @@
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
 |51|133|상시|[티웨이항공](https://recruit.twayair.com/WiseRecruitWeb/) ||2년 경력, 계약직 IT 행정지원|📤 서류제출|||
-|52|134|2024 05 17|[케이지이니시스](https://www.jobkorea.co.kr/Recruit/GI_Read/44479447?Oem_Code=C1&sc=15) ||결제 서비스|📤 서류제출|||
+|52|134|2024 05 17|⭐️[케이지이니시스](https://www.jobkorea.co.kr/Recruit/GI_Read/44479447?Oem_Code=C1&sc=15) ||결제 서비스|📤 서류제출|||
 |53|135|2024 05 16|[한일네트워크](https://www.jobkorea.co.kr/Recruit/GI_Read/44609695?Oem_Code=C1) ||경력 3년, 웹개발자|📤 서류제출|||
 |54|136|2024 06 23|[BCD](https://www.jobkorea.co.kr/Recruit/GI_Read/44539587?Oem_Code=C1) |중소|이커머스, 경력1년|📤 서류제출|||
 |55|137|2024 05 10|⭐️[동국시스템즈](https://www.jobkorea.co.kr/Recruit/GI_Read/44581737?Oem_Code=C1&sc=7) |중견|웹개발자, 내부시스템|🤖 AI역량검사|||
@@ -258,7 +258,7 @@
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
 ||187|상시|[토스](https://toss.im/career/apply/basic/4103014003) ||IT Supotter 계약직 3개월, 컴퓨터 환경 구축||||
-|81|188|2024 05 15|⭐️[중앙대학교병원광명점](https://caumc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180687) ||의료정보팀 행정직, RPA|👨‍👨‍👦 1차 면접|||
+|81|188|2024 05 15|⭐️[중앙대학교병원광명점](https://caumc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180687) ||의료정보팀 행정직, RPA|❌👨‍👨‍👦 1차 면접 탈락|||
 |-|189|2024 05 16|[전북은행](https://job.incruit.com/jobdb_info/jobpost.asp?job=2405030001195&handle=48250FBD2E7FAA1ABAE691872601039F85DF34FC3DA36E158CCEAF0DAE62FB8B) ||경력직 대리급 이하, IT 17시|❌ 미지원|||
 |-|190|2024 05 16|[케이뱅크](https://inthiswork.com/archives/118787) ||프론트엔드 24시|❌ 미지원|||
 |-|191|2024 05 17|[신용보증재간중앙회](https://job.incruit.com/entry/jobpost.asp?job=2404300004694) |||❌ 미지원|||
