--- a/_posts/Resume/recent/2024-05-06-이지케어택.md
+++ b/_posts/Resume/recent/2024-05-06-이지케어택.md
@@ -6,7 +6,7 @@
 서울대 병원 계열사
 
 
-# 자기소개서
+# 💀자기소개서
 ## 지원동기 1000자
 (나머지는 pdf 파일 첨부)
 
@@ -20,10 +20,10 @@
 이후 2개월 간, 팀원과 동화된 모습을 보여드리면서, 계약기간 동안 기존에 작성된 레거시 코드**나** 앞으로 있을 개발 부문에 오류나 보안사항을 준수하며, 맡은 역할에서 성과가 날 수 있게, 꼼꼼하게 수행하면서 마지막 날까지 새로운 기회를 얻을 수 있도록 최선을 다해 인턴 기간을 마치겠습니다.
 
 
-# 오케이 5월 14일 합격
+# 💀오케이 5월 14일 합격
 인적성 평가
 
-# 5월 22일 면접
+# 💀5월 22일 면접
 아 이 회사는 내가 낸 지원서를 조회할 수 가 없네
 내가 무슨 pdf를 넣었을까?
 
@@ -31,7 +31,7 @@
 
 
 
-## 1분자기소개
+## 1분자기소개 준비
 안녕하세요, ______의 _____부문에 지원한 김용록입니다. 
 
 [1부 내 이야기]
@@ -63,3 +63,40 @@
 뭐지,,,, 준비 아에 안했는데
 
 
+## 후기
+- 인성검사 서술형 2문제
+- 코딩테스트는 제공된 노트북으로 2문제(아스키코드 문제 + SQL 문제)
+- 면접
+
+4명씩 한 조로 들어갔다.
+면접 시간은 이렇게 대기시간까지 두 시간 반 정도 사용했다.
+
+### 우선 인성검사 같은 경우,
+
+- 나와 맞지 않은 보직일 때, 어떻게 하겠냐
+- 병원측에서 무리한 요구를 할 때, 어떻게 하겠냐
+
+그냥 내 생각을 적었다. 별거 없었다.
+
+### 코딩테스트
+일단 알고 넘어가야 할 께, 노트북 내에 인터넷 사용 가능한 오픈북이었다. 근데 쳇GPT 써서 풀어버릴까 하다가 그냥 안 썼고, 그냥 찾았는데, 이상하게 안 나오더라?
+
+1. 번 문제 같은 경우, i'm yongrok 이라는 문장이 주어졌을 때, 사용하지 않은 알파벳 찾기 문제다. 나는 못풀었다.
+2. 번 문제 같은 경우, 2분 만에 풀었다. SQL은 너무 쉬웠다.
+
+
+### 면접
+면접 들어가자 마자 우리 조는 한 명이 안 와서 3명이 들어갔다. 1분 자기소개에서 면접관이 성장과정과 지원동기를 묶어서 한번에 1분 안에 말하란다. 그냥 하면 되는데, 절었다. 그것도 3번이나ㅋㅋㅋㅋ 멘탈이 너무 나가더라. 심지어 자기소개를 제대로 끝내지도 못했다.
+
+질문은 개인 질문으로 나갔고, 그나마 기술 질문은 내 옆에 애들은 자바의 기초에 대해서 물었는데, 나만 회사에서 뭐했냐고 묻더라?
+
+- 느낌은 임원분들인데, 기술을 아는 임원 같았음
+
+아니 내 차례에 말하려고 생각하고 있었는데, ㅅㅂ ㅈ됐다. 그냥 생각나는데로 말했다. 
+퇴사 이야기도 하고 
+
+그나마 내가 받은 기술 질문은 도서관 클래스를 어떻게 만들거냐 인데, 펜과 종이 만 있으면, 금방 하겠지만 여기서도 한 번 절었다.ㅋㅋㅋㅋ
+
+그냥 자포자기. 그리고 졸리더라. 코테에서 힘을 너무 썼나 보다.
+
+마지막으로 충격적인 건 면접비는 없었다. 그냥 양치 세트?
