--- a/_posts/Resume/recent/2024-05-16-중앙대학교병원.md
+++ b/_posts/Resume/recent/2024-05-16-중앙대학교병원.md
@@ -20,11 +20,11 @@
 ❗️ RPA개발(이미지 인식 기반) 또는 의료 IT 프로그램 개발 경력자 우대
 - 응시자격에 개발 경험이 있네? 빠르게 만들어버려 이따위 거
 
-
 ## RPA
 - 참고 기사
 
 [용인세브란스, 격리병상 자동 배정 등 RPA 솔루션 구축](https://www.doctorsnews.co.kr/news/articleView.html?idxno=140615)
+
 
 
 
@@ -70,9 +70,11 @@
 
 
 
+
+
+
 # AI역검
-합격ㅋㅌ
- 
+합격ㅋㅌ 
 
 ## 1분자기소개
 안녕하세요, ______의 _____부문에 지원한 김용록입니다. 
@@ -105,11 +107,352 @@ Django 기반의 진료 접수 기능을 작게나마 구현해봤습니다.
 환자들에게 사회적 안정감과 삶의 질을 높이는데 기여하고 싶습니다.
 
 w
-## 
-직업선택 기준
+## 후기
+### 자기소개
+절었다. 일단 내용이 너무 많아서 1분 안에 다 못 말했다.
 
-w
+### 직업선택 기준
 
-직업 선택할 때 안 중요한 거
-- 시방ㄹ
-관심사
+### 직업 선택할 때 안 중요한 거
+관심사에 안 맞으면 이라고 말했던 거 같다.
+- 질문을 제대로 못 받아친 거 같다.
+
+### 결과적으로
+12시 5분 제출,,,, 전번적으로 잘 못했다.
+
+
+
+
+# 면접
+일단 AI가 상당히 망했는데, 합격 소식을 받았다.
+27일 월요일 면접이다.
+
+## 유튜브 참고
+
+[시화병원 s-log 전산팀 브이로그](https://www.youtube.com/watch?v=Rd3pgdbuKgY)
+
+- 주업무 : 서버, 네트워크, 인프라
+- 부업무 : 컴퓨터 세팅
+
+[울산대학교병원 IT팀](https://www.youtube.com/watch?v=WpSGCbrk3Tk)
+
+
+[한양대학교병원 안경 안 쓴 남자분](https://www.youtube.com/watch?v=uxYNXf-Vbms)
+
+- 자기소개
+- 직무에 맞는 질문
+- 예상질문 30개
+- 본인한테 직장의 의가 무엇인가?
+
+[병원 전산팀 꼰대 썰](https://www.youtube.com/watch?v=HVzdVKIvPOE)
+
+
+## 생각을 다시해보자
+내가 면접관이야? 그럼 넌 어떤 애 뽑을래?
+
+오래 일할 애 뽑을래?
+
+
+
+## chat GPT
+OCS EMR?
+문제해결능력
+- 네트워크 장애
+- 데이터베이스 오류
+
+협업경험
+- 비기술 의사소통 경험
+
+보안관리
+파이썬 라이브러리
+
+테서렉트 라이브러리 = ocr
+
+
+
+## 중앙대광명병원관련 뉴스
+[22년 7월 중대광명 "연봉보다 친절문화 경쟁력 …2026년 상종 목표"](https://www.medicaltimes.com/Main/News/NewsView.html?ID=1148197)
+- 3월 진료 시작 일 환자 1천명 돌파 "AI 방역로봇 도입·메타버스피탈 구축"
+
+[22년 7월 중앙대광명병원, 지능형 RPA 기반 의료서비스 혁신 위해 ‘블루프리즘’ 도입](https://www.whosaeng.com/137698)
+- 중앙대학교광명병원(병원장 이철희)이 지능형 RPA(Robotic Process Automation, 로보틱 프로세스 자동화) 기반 의료서비스 혁신을 위해 지능형 자동화 분야 글로벌 선도 기업 블루프리즘과 도입계약 및 업무협약을 체결했다.
+- 최근 RPA CoE(Center of Excellence, 전문가 조직)를 구성해 효과적인 자동화 프로세스 발굴 및 운영 관리 기반을 마련
+- 의무기록팀, 보험심사팀, 원무팀, 기획예산팀, 스마트헬스파트 등 5개 부서에 시범 도입 후, 점진적으로 적용 부서를 확대해 나갈 계획이다.
+
+
+[23년 8월 [올쇼TV] “AI와 RPA를 주도할 조직, 사람, 기술, 어떻게 준비할 것인가?” 6월 15일 생방송](https://www.etnews.com/20230607000202)
+- 최근 ChatGPT를 비롯한 AI 기술이 확산되면서 RPA와 연계되는 일들이 점점 더 많아지고 있다.
+
+
+[23년 10월 중앙대광명병원, 로봇수술 500례 달성](https://www.whosaeng.com/147728)
+- 외과와 비뇨의학과, 산부인과, 마취통증의학과 등 다양한 진료과
+
+
+[24년 1월 중앙대광명병원, 제1회 스마트챌린지 개최](https://www.whosaeng.com/149461)
+- AI·빅데이터 등 ICT 기술을 활용해 스마트병원의 패러다임을 선도하고 있다. 디지털 트윈세상에 병원을 구현하는 ‘메타버스피탈’ 구축, ‘초연결(Hyper-Connectivity)’
+- 디지털 전환 혁신 병원 실현을 위해 업무 생산성 향상을 돕는 RPA(Robotic Process Automation)를 적극적으로 실무에 적용해 왔다.
+- 의료기관 최초 블루프리즘 아시아·태평양 지역 최우수상을 수상하기도 했으며, 올해는 인공지능을 적용해 ‘디지털 전환 고도화’를 추진할 예정
+
+- 스마트한 병실 배정(원무팀 김선호, 박성빈), 
+- 거래처 홈페이지 로그인 자동화(구매물류팀 김상철), 
+- 노가다탈출 넘버원(기획예산팀 김주명)이 수상의 영광을 안았다.
+
+
+[24년 1월 디지털헬스케어 중심지 떠오른 중앙대병원…그 배경은?](https://www.medicaltimes.com/Main/News/NewsView.html?ID=1156949)
+- 전담 조직 만들며 성과 창출…"디지털헬스케어 필수 요소"
+- 환자에게 최선의 솔루션을 제공할 수 있는 기회인 만큼 앞으로도 디지털 혁신에 앞장설 것
+
+
+## 예상질문
+
+[잡플레닛](https://www.jobplanet.co.kr/companies/10418/interviews_by_filter?by_occupation=11600&by_job_rank=&by_success=)
+
+- 자기소개와 해당 직무 능력과 협력을 하는 법입니다.
+
+1. 자기소개 1분간
+2. 병원내 입사후 포부
+3. 향후 긍정적으로 일으킬 병원내 전산에서 혁신적인 기술클라우드 or ai 선택
+4. 입사동기
+
+### 자기소개
+안녕하세요. 중앙대학교광명병원의 "의료정보팀"에 지원한, 
+'신속한 학습과 적응력'을 가진 개발자 김용록입니다. 
+
+학교나 국비지원 교육에서 했던 다양한 개발 경험과
+스스로 자격증 공부를 통해, 
+실무에서 직면할 수 있는 다양한 문제를 
+해결하는 방법을 배웠습니다.
+
+실제로 1년간 회사에 근무하면서 이를 접목시켜 
+지난 회사에선 공공기관 SI 프로젝트에서 신속한 학습과 적응력을 발휘하여 성과를 냈었고,
+다양한 경험을 통해 혁신적인 문제 해결사로 성장할 수 있었던 경험이 있습니다.
+
+이러한 경험을 바탕으로 중앙대학교광명병원의 업무에 보다 빠르게 적응해서 
+회사에 기여할 수 있을 거 같아 지원하게 되었습니다.
+
+
+#### ❌자기소개에서 추자적으로 + 지원동기
+[2부 실제 경험]
+제가 이번에 중앙대학교광명병원에서 진료를 받아 보니까
+가족의 걱정을 많이 받았습니다.
+그 과정에서 의료 서비스의 질이 향상된다는 건
+환자들이나 본인 가족의 
+건강에 대해서 걱정을 덜게해 줄 거라는 생각을 했었습니다.
+
+[3부 지원동기]
+평소에 병원의 IT 시스템을 유심히 봤었습니다.
+이번 공고를 확인하자 마자, 
+Django 기반의 진료 접수 기능을 작게나마 구현해봤습니다.
+
+이러한 경험을 바탕으로 중앙대학교광명병원에서 더 나은 진료 환경을 제공함으로서 
+환자들에게 사회적 안정감과 삶의 질을 높이는데 기여하고 싶습니다.
+
+
+### 프로젝트 경험
+
+
+
+
+
+### 입사후 포부
+
+
+
+
+### 입사후 계획
+입사 후에는 처음 2주 동안, 중앙대학교광명병원의 소스코드 분석 및 구조를 엑셀 파일에 정리하면서 사업의 방향성 및 업무에 대해 파악하겠습니다. 이후엔 가르칠 필요없이 최소한의 가이드라인 만 주신다면, 주시는 업무에 최선을 다해 진행하겠습니다.
+
+이후 2개월 간, 팀원과 동화된 모습을 보여드리면서, 기존에 작성된 레거시 코드나 앞으로 있을 개발 부문에 오류처럼 보안사항을 준수하며, 맡은 역할에서 성과가 날 수 있게, 꼼꼼하게 수행하면서 
+3개월 차부터는 스스로 업무를 차질 없이 수행할 수 있도록 하겠습니다.
+
+
+
+# 면접 후기
+2대2 면접
+
+가장 큰 문제가 뭐였냐면, 
+
+컨디션이 진짜 안 좋았다. 잠을 3시간 잤는데 11시 반에 면접이라 갔더니 1시간 반은 대기한 거 같다.
+약기운도 떨어지고 피곤하고 하니까 기면증이 확 올라오는 느낌을 받았다.
+그리고 기면증이 걸릴까 너무 긴장됐다.
+
+## 1년동안 뭐했어요?
+- 대답
+    가족이랑 여행다녔습니다. 끝
+
+- 시발 진짜 한 일
+    1. 깃허브에 서버 파서 yml에 refeed? 문법 써서 블로그 개발
+    2. ChatGPT 3.5, extendtion이랑 API 처음 나왔을 때 대화형 콘텐츠가 없던 시절 회화 기능 구현
+
+    3. 라즈베리파이에 omv os 올려서 개인 Nas 서버 구현
+    4. 정보처리기사 취득 / 빅데이터분석기사 공부
+    5. React로 이커머스 서비스 구현
+    6. 이전 Spring 프로젝트는 maven인데, 유연성이 높이고자, Spring boot에 gradle로 변경 작업
+
+    7. 고장난 기계 고쳐서 팔기
+    8. 아이패드로 3D 모델링 공부
+
+
+## 지난 회사 이야기?
+- 대답
+    지난 회사 이야기하다가 중간에 갑자기 집중이 풀리면서 입사 후 포부를 섞어서 버퍼링 걸렸다.
+    이후 모른다,,,, 어이가 없다
+
+- 적적한 답
+    회사에서 했던 경험 그냥 말하면 되는데
+
+
+## 병원 용어 어려운데 괜찮겠냐
+- 대답
+    지난 회사에서 업무숙지가 중요하다고 생각했다. ("예시 말하는데, 까먹었다.")
+    2주 간 코드, 2달간 팀원과 동기화된 모습 보이면서 같이 외우겠다.
+
+- 적절한 답
+정보처리기사 때, 엑셀에 2300단어 정리해서 외웠다. 같은 방법으로 외우겠다.
+
+
+
+
+
+# 탈락
+
+안녕하세요. 
+중앙대학교광명병원 의료정보팀 지원했던 개발자 김용록입니다.
+
+제가 능력이 부족해서 면접은 떨어졌지만, 
+중앙대학교광명병원에 가족들이 자주 갑니다.
+이번 해에도 할머니 장례식, 아버지가 수술과, 상태가 악화돼 응급실에 만 두 번 가셨고,
+저도 종양이 있어서, 림프종인지 캐슬만병인지 진단받기 위해 3달 째, 다니고 있습니다.
+
+6개월 간 장례식장부터 입원 병실까지 전층을 다니면서,
+어느정도 시스템이 보이길래 생각했던 건데, 
+면접에 떨어지기도 했고, 혹시나 다른 사람들한테 쓸 모 있을까 해서 보내봅니다.
+자세한 사항은 아래 내용 참고와 좋은 개발 부탁드립니다.
+
+감사합니다.
+
+
+
+📌 RPA 
+블루프리즘을 사용해본 적이 없어서 자세한 방식은 잘 모릅니다. 그래도 의사 선생님이 사용하실 때, 어떤 식으로 사용하고, 동작하는지 만 확인했었습니다. 그래서 블루프리즘의 응용 보다 개인적인 생각으로 만 작성했습니다.
+
+1. 처음 방문해서 진료과 찾을 때
+일하시는 분들이야 매일 오니까 잘 아시겠지만, 원무과에서 결제하고 진료과 찾을 때, 환자 입장에서 약간 불편합니다. 바로 뒤에 진료과 정보가 있는 것도 아니고, 엘레베이터 앞이나 혹은 키오스크 뒤에 설명해주시는 분들한테 여쭤봐야 한다는 점이 있었습니다. 서있는 직원 분들은 불편한 사람들을 위해 존재한다고 생각이 드는데, 결제했을 때, 키오스크에 진료과 위치 정보만 띄어도 그 분들의 일을 줄일 수 있지 않을까 생각합니다.
+
+2. 간호사 확인
+진료 볼 때, 접수처 키오스크에서 접수증 뽑고, 간호사 분들이 항상 확인하고, 어느 병실 앞에 앉아 있으라고 하던데, 물론 이유가 있겠지만, 진료를 기다리면서 주변 상황을 살폈을 때, 일반적으로 간호사 확인은 불필요한 단계 같습니다.
+
+접수처 키오스크 -> 접수(도착 확인), 접수증 발급 -> 간호사 승인 -> 대기자 화면에 출력 확인 -> 진료
+
+3. 진료진행상황 & 수술전검사안내문
+진료진행상황을 간호사분들이 뽑아 주시는데, 항상 펜으로 적어주시면서 설명해주싶니다. 예약 날짜도 자동으로 기입돼서 같이 출력된다던가, 혹은 저와 관련이 없는 황목은 안나오게 하기 만 해도 그 부분 일이 많이 줄 거라 생각합니다. 
+
+앞에서 못 알아 들으시는 분이나 예약 변경?하시는 분이 계시면, 2번과 3번은 상당히 오래 기다리면서, 간호사분들의 시간도 많이 사용하게 됩니다.
+
+4. 특정 과에 의사 선생님 부족
+RPA가 있어도, 특정 과에 의사 선생님의 수가 부족한 거 같습니다. 혈액종양내과는 순환이 안됩니다. 아마도 과 특성상 다들 불안하셔서, 진료 때, 많이 질문하시는 거 같습니다. 그래서 대기하는 인원이 많아 서있는 분들도 많습니다.
+그럼 의사 선생님을 대체할, 진료를 봐줄 매개채가 필요한데, 그건 진단 AI라고 생각은 하지만 제가 AI에 대한 지식이 부족해서,,,
+그나마 가능하다고 느끼는 부분은 ChatGPT 이용하는건데, OpenAI에서 제공하는 튜닝 가능한 API는 아직 3.5라서 정확도가 확연히 낮습니다. 최소한 4 버전은 돼야 가능해 보입니다. 간단하게 종양이 있는 초음파 사진을 주고 분석해달라고 했을 때, 가능한 병명에 대한 진단이 된다는 것을 개인적으로 테스트 해봤습니다.
+
+미리 3.5터보 버전을 기반으로 초안을 개발해 놓고, 4나 4o버전을 제공할 때, 전환하는 건 어떻까 하는 의견입니다.
+
+그리고 개인이 CT나 초음파 사진을 소지하는 건 불가능하다고 알고 있습니다.
+만약에 보안문제가 있을 수 있다고 한다면, 개인정보일텐데, 분석을 시켜야 하니 사진은 어쩔 수 없습니다. 그러나 텍스트로 된 개인정보는 중간에 검증단계 만 제대로 만들면 어느정도 가능할 거라 생각합니다.
+
+
+
+- 📌 어플리케이션
+1. 잘 만든 어플리케이션 활용
+어플이 있던데 알려주셨으면, 처음부터 사용했을 거 같습니다. 광고가 부족합니다. 
+진료 예약 시간이라던가, 바코드에 환자 번호가 있어서, 나이 드신 분들도 쉽게 사용할 수 있도록 UI도 잘 만드셨는데, 활용 면이 아쉬운 거 같습니다.
+
+2. 결제 시스템
+시간 맞춰서 진료 받으러 갈 때, 키오스크 앞에 나이 드신 분들이 많으면, 그 과정이 늦던데, 결제를 원무과에서 하는 것도 좋지만 핸드폰 어플에 사용하는 건 어떨까 생각했었습니다. 그러나 이것도 어플에 있는 기능이던데, 이 부분이 심지어 카테고리에 숨겨져 있기도 하고, 자주 활용되지 않을 거 같아 아쉬운 거 같습니다.
+
+
+
+- 📌 개선
+1. null
+감염내과 박정하 교수님한테 진료 볼 때, 접수증에는 구역이 null이었습니다.
+
+2. 어플에 검사결과조회 기능(아이폰)의 아쉬움
+검사결과조회 -> 검사명 url 클릭 시 -> 핸드폰에 기본 설정된 브라우저로 이동
+
+이 부분 제대로 안 나옵니다. 결과가 일단 중앙대학교병원 어플에서 보는 것도 아니고, 클릭 시, 정보가 나오는 부분있고 안 나오는 부분있습니다. 일반적으로 보기 힘듭니다.
+
+3. 
+번외로 의약품사전 기능은 어플 내에서 iframe 태그로 네이버 화면을 띄우는 느낌인 반면에 다른 기능들은 핸드폰에 기본 설정된 브라우저로 이동됩니다. 특히, 본인의 검사 결과 조회는 중요한 기능이라고 생각합니다. 근데 이 부분이 완성도 면에서 만들다 만 것 같습니다.
+
+
+
+
+- 📌 입원병실 아이디어
+1. 입원실 보호자 출입증 발급과정 & 사실 무의미
+우선, 입원실 갈 때도 지하 응급실?에서 출입증 받고, 올라갈 때, 5층에서 갈아타야 하던데, 이 전반적인 과정 설명이 부족한 거 같아 젋은 저도 한참 해맸습니다.
+
+두 번째로, 어플리케이션에서 
+세션으로 임시값을 서버측에 만들고 -> QR을 발급해서 -> 그 정보로 일정 기간 동안 만 가능하게 디지털 출입증을 발급한다던가,
+
+혹시 모를 침입자를 대비해, 카운팅이 가능한 방법을 찾아보는 것도 괜찮은 거 같다고 생각했습니다. 예를 들면, 라즈베리파이에 다양한 모듈이 있으니까 티머니의 태그리스나 출입증에 전자기 유도관련한 도난방지시스템을 응용한다던가, 요즘에는 다이소에 바코드를 안 찍고 사이에 둬도 바코드를 인식되던데, 아무튼 그런 기술을 구현할 수 있는지 찾아보는 것도 어떨까,,, 간단한 의견 남겨 봅니다.
+
+카운팅 수와 입장 수가 같지 않다면 -> 출입증 찍고 들어오지 않은 침입자 발생 -> 시간정보 저장 -> cctv 캡쳐 -> 입원병실 담당 간호사에게 전송
+
+왜냐하면 제가 출입증을 어머니한테 드리고, 앞에서 기다리다가 출입증 없이도 쉽게 들어갔던 경험이 있습니다.
+
+
+
+- 📌 장례식장 아이디어
+저희 친형이랑 생각했던 건데, 장례식 때, 조의금을 받으면, 매일 밤 누가 왔었는지 봉투를 하나하나 확인하고 제가 직접 엑셀에 작성했었습니다. 봉투에 시험지 OMR 카드 처럼, 바코드 같은 걸 만들어서, 자동인식되어 가능하게 하면 어떨까 의견입니다.
+
+조의금 봉투에 이름 omr 작성 -> 금액 omr은 상주가 직접 입력 -> 바코드 인식 -> table이나 엑셀에 자동 입력 
+장례식장 임시 결제 계좌 발급 -> 입금 -> table이나 엑셀에 자동 입력
+
+-> 장례식이 끝나면 문서화 -> 상주에게 전송
+
+
+
+- 📌 마지막으로
+암일 때, 3개월이면 두배 커진다고 알고있습니다. 그런데 제가 가진 종양이 암인지 진단받기 위한 과정이 3개월 정도 걸릴 예정이고, 과정이 길다고 느꼈습니다.
+
+감염내과 -> 혈액 검사 -> 초음파 검사 -> 진료, 뭐가 있네? ->
+혈액종양내과 -> 혈액 검사 -> CT 촬영 -> 진료, 자세한 건 조직 검사를,, ->
+이비인후과 -> 혈액 검사, 소변 검사, x레이 촬영, 심전도 검사 -> 조직 검사 ->
+혈액종양내과 진단
+
+다가오는 6월에 종양 하나를 제거하면서, 조직 검사를 진행할 예정입니다. 
+그런데 만졌을 때, 작은 거 두개가 더 생겨서 금일 점심에 이비인후과 진료할 때, 말씀 드리고 왔습니다.
+이 부분에 대한 아이디어는 없습니다. 미뤄 진다는 거, 의사 선생님 부족이지, 진료 과정이나 시스템 프로세스의 문제라고 생각은 안합니다. 그래도 이 부분은 개발자 선생님들이 직게나마 줄일 수 있다고 생각합니다.
+
+이전에 혈액종양내과에 앉아서 대기하고 있다 보니, 사람들 표정을 봤습니다. 마스크에 가려져 있었지만 그 절망 가득한 눈과 깊은 한숨에,,, 무거운 분위기는 저도 마찬가지로 그 자리에 앉아 있으면서 많은 감정이 교차했던 거 같습니다. 그 환자들한테 쓸데 없는 절차를 줄여서, 진료를 빠르게 받을 수 있도록 해주는게 RPA로서 가장 필요해 보입니다.
+
+아무튼, 이번 공고 준비하면서, 생각했던 쓸모 없어진 아이디어가 아픈 사람한테 쓸모 있었으면 하는 바렘으로 이메일로 한 번 보내봤습니다. 중앙대학교광명병원 부지가 저희 집안 예전 묘자리라서, 그만큼 집안 친척이 많이 살고 있어요. 저희 가족 진료 잘 부탁드립니다.
+
+다들 몸 아프지 마시고, 좋은 하루되세요.
+
+
+
+
+
+(*면접에 대한 내용은 '⭐️' 만 보세요.)
+⭐️ 이력서
+이력서는 제가 조건이 안돼서 그냥 공고 보자마자 지난 6개월 동안 장례식장부터 입원실까지 거의 전 층을 다 가봤고, 지금은 제가 아파서 이 병원에 진료를 다니는 중이라 전반적인 시스템이 눈에 보이기도 해서, 그냥 단기간에 만들어버리고 지원했습니다.
+
+⭐️ AI역량
+AI는 잘 보고싶어서 미루다 봤어요. 또 대답은 욕심 부리다가, 시간 초과를 많이 해서 그 때부터 시간 신경 쓰다보니 면접 종류는 전반적으로 못 본 거 같아요. 합격한 거 보면 AI는 중요하진 않은 거 같습니다.
+
+💀 면접 서론
+어차피 면접은 제가 기면증이 있어서 다른 곳에서도 항상 비슷하게 떨어져요.
+긴장돼 잠을 잘 못 잤는데, 하필 대기 시간이 길어지면 약기운도 떨어지고, 긴장으로 스트레스도 받아버리니까, 졸려서 집중을 못했던 거 같아요. 커뮤니케이션 능력이 떨어지게 느끼셨을 거라 생각해 불합격은 예상했습니다.
+
+이번 면접에서 예를 들면, 아버지가 이번 해에 이 병원에서 수술과 응급실에 두 번 다녀 오시기도 해서 "환자=가족"이라는 연상은 면접 전에 계속하고 있었어요.
+근데 지난 회사관련 질문에 대답하다가 갑자기 5분 거리에,,어???(버퍼링)
+1년 동안 뭐했냐는 질문에는 개발 경험들이랑 자격증 취득 등, 취업 준비했던 거 말하면 되는데, 갑자기 가족이랑 여행다녔다고,,, 심지어 가족이랑 여행다닌 적도 없는데,,,씹ㅋㅋ
+그래도 이전 면접에선 도마뱀에 대해 말한 적도 있어서, 이 정도면 뭐ㅋㅋㅋ 
+의사 선생님이 순간적으로 다른 상상하는게, 그 순간 꿈을 꾸는 거라고 하더라고요.
+
+⭐️ 면접
+아무튼 간호사들 면접을 본 후에 전산직 면접이라 대기 시간 1시간 30분~2시간 정도로 길었어요. 면접은 병원이라 그런가 착하다? 편안한 분위기에 질문도 평이했던 거 같습니다. 면접관 분들도 전반적으로 인상은 순하셨어요.
+그리고 제가 기대치에 못 미치는 부분을 보였을 때, 투명인간이나 빨리 끝내기 위해 대답을 끈는다던가, 짜증을 섞어 말하시는 면접관 분들도 많았은데, 전혀 그런 거 없었고, 오히려 긴장 풀어주려 하시는 말은 스윗했습니다.
+그리고 사실 옆에 같이 본 분이 관련 경험도 묵직하고, 인성도 저 보다 이 일에 어올리는 분이어서, 실수 없이 제대로 봤어도 졌을 거 같아요.
+
+그럼 다들 좋은 하루되세요~🤗
