--- a/_posts/Diery/CPcompany/2023-10-05-xBarbour.md
+++ b/_posts/Diery/CPcompany/2023-10-05-xBarbour.md
@@ -3,7 +3,7 @@ layout: content
 title:  "[CP Company] CP컴퍼니 x 바버 23FW 소식"
 date:   2022-01-01 12:45:29 +0900
 categories: CP Company
-pin: true
+pin: false
 ---
 
 
