--- a/_posts/Resume/Xprograming/ChatGPT/GPTers-Bankrupt/2023-08-13-Bankrupt.md
+++ b/_posts/Resume/Xprograming/ChatGPT/GPTers-Bankrupt/2023-08-13-Bankrupt.md
@@ -3,7 +3,7 @@ layout: content
 title:  "[지피터스] 위기의 OPEN AI ,2024년 말까지 파산할 가능성"
 date:   2023-08-13 12:45:29 +0900
 categories: GPTers
-pin: true
+pin: false
 ---
 
 
