--- a/_posts/Resume/Xprograming/ChatGPT/GPTers-Update/2023-11-11-upgrade.md
+++ b/_posts/Resume/Xprograming/ChatGPT/GPTers-Update/2023-11-11-upgrade.md
@@ -3,7 +3,7 @@ layout: content
 title:  "[지피터스] 최신 업데이트, 활용 방법"
 date:   2023-11-11 12:45:29 +0900
 categories: GPTers
-pin: true
+pin: false
 ---
 
 # 최신 업데이트 확인하기
