--- a/_posts/Resume/Xprograming/ChatGPT/Tips/2023-08-21-Tips.md
+++ b/_posts/Resume/Xprograming/ChatGPT/Tips/2023-08-21-Tips.md
@@ -3,7 +3,7 @@ layout: content
 title:  "ChatGPT 알면 좋은 것들 정리"
 date:   2023-08-21 12:45:29 +0900
 categories: GPTers
-pin: true
+pin: false
 ---
 
 
