--- a/_posts/Resume/Xprograming/Java/CodingTest/2024-04-26-백준과깃허브연동.md
+++ b/_posts/Resume/Xprograming/Java/CodingTest/2024-04-26-백준과깃허브연동.md
@@ -3,7 +3,7 @@ layout: content
 title:  "[Github] 깃허브에 백준 올리는 방법"
 date:   2024-04-26 12:45:29 +0900
 categories: Github
-pin: true
+pin: false
 ---
 
 
