--- a/_posts/Resume/recent/2024-05-06-이지케어택.md
+++ b/_posts/Resume/recent/2024-05-06-이지케어택.md
@@ -100,3 +100,49 @@
 그냥 자포자기. 그리고 졸리더라. 코테에서 힘을 너무 썼나 보다.
 
 마지막으로 충격적인 건 면접비는 없었다. 그냥 양치 세트?
+
+
+
+# 합격?
+뭔가 싶지만 합격했다.
+# 1. 비상연락망과 주소
+# 2. 이력서 + 기술스택 
+<그룹웨어 ID 생성가이드>
+1. ID는 영문 3~10자리이내로만 설정가능
+   (예 - Gildong.Hong / pms / minus / 한글 사용 불가)
+2. 초기 비밀번호 : ezct7410! *최초 로그인시 변경
+3. 그룹웨어 URL :  http://gwa.ezcaretech.com
+   (입사일부터 사용 가능)
+
+   
+# 3. 입사 구비서류
+1. ⭕️ 증명사진 별도 파일 첨부 (120*160/pixel)
+2. ⭕️ 최종학교 졸업 증명서
+3. ⭕️ 자격증 사본 (이력서 內 기입 자격증 제출)
+4. ⭕️ 주민등록등본
+5. ⭕️ 급여통장 사본 (신한은행 주거래 은행_최대한 계좌제출 추천)
+6. ⭕️ 근무처 별 경력증명서 (이력서 內 근무 이력 작성자만 해당)
+7. 최종 직장 원천징수영수증 (이력서 內 근무 이력 작성자만 해당)
+
+
+
+
+
+## 기술스택 파일에 앞으로 계획이 있다
+
+[대학병원의 진료 과정 단축]
+저의 목표는 대학병원의 진료 과정 단축입니다. 암은 3개월이면 두 배로 커진다고 알고있습니다.
+제가 림프종인지 진단을 받기위해 병원을 다니면서, 조직검사까지 3개월 걸렸습니다.
+그 문제점에 대해 생각해보고, 제가 내린 결론은 특정 과에 의사 선생님의 수가 부족합니다. 제가 다니던 혈액종양내과는 환자 순환이 안됩니다. 아마도 과 특성상 다들 불안하셔서, 진료 때, 많이 질문하시는 거 같습니다. 그래서 대기하는 인원이 많아, 서있는 분들도 많습니다.
+
+의사의 수가 부족한 문제는 저에게 해결방법이 없습니다. 그러나 진료 과정은 개발자가 작게나마 줄여줄 수 있다고 생각합니다.
+이번 공고를 준비하면서, 환자에게 쓸데 없는 절차를 줄여, 진료를 빠르게 받을 수 있도록 해주는 RPA나 진단AI가 가장 필요해 보인다 느꼈습니다.
+
+입사 후, 기술인력관리카드 파일에 기재된 기술 스택을 우선적으로 습득하고, 이후에는 현재 기술에 신기술을 접목시길 수 있는 방법에 대해 끈임없이 생각해보겠습니다.
+그리고 더 나은 진료 환경을 제공함으로서 환자들에게 사회적 안정감과 삶의 질을 높이는 동시에 이지케어택에 기어하는 것이 제 목표입니다.
+
+
+
+
+
+
