--- a/_posts/Resume/Xprograming/ChatGPT/GPTers-USLawOfDeepfake/2023-08-15-USLaw.md
+++ b/_posts/Resume/Xprograming/ChatGPT/GPTers-USLawOfDeepfake/2023-08-15-USLaw.md
@@ -3,7 +3,7 @@ layout: content
 title:  "[지피터스] 미 연방선거위원회, 2024년 선거 앞서 인공지능 딥페이크 광고 규제 추진"
 date:   2023-08-17 12:45:29 +0900
 categories: GPTers
-pin: true
+pin: false
 ---
 
 지피터스([GPTers](https://www.gpters.org/c/news/2024))에서 흥미로웠던 글을 가져왔다.
