--- a/_posts/Resume/Xprograming/Java/CodingTest/2023-10-06-SQL1.md
+++ b/_posts/Resume/Xprograming/Java/CodingTest/2023-10-06-SQL1.md
@@ -3,7 +3,7 @@ layout: content
 title:  "[SQL] 코딩테스트 문제 풀어보기 1일차"
 date:   2022-08-12 12:45:29 +0900
 categories: SQL
-pin: true
+pin: false
 ---
 
 
