--- a/_posts/Resume/Xprograming/Python/Grammar/NLPNews/2023-07-12-Week36.md
+++ b/_posts/Resume/Xprograming/Python/Grammar/NLPNews/2023-07-12-Week36.md
@@ -3,5 +3,5 @@ layout: content
 title:  "[NLP News] 위클리 NLP: Week 36"
 date:   2023-07-12 12:45:29 +0900
 categories: NLP News
-pin: true
+pin: false
 ---
