--- a/_posts/Resume/last/2022-03-13-Question65.md
+++ b/_posts/Resume/last/2022-03-13-Question65.md
@@ -3,7 +3,7 @@ layout: content
 title:  "[면접] 면접 질문 및 답변 65선"
 date:   2022-03-13 12:45:29 +0900
 categories: Resume
-pin: true
+pin: false
 ---
 
 
