로컬 변경사항 커밋

--- a/_posts/Diery/RaspberryPi/NAS/2023-05-22-NAS.md
+++ b/_posts/Diery/RaspberryPi/NAS/2023-05-22-NAS.md
@@ -3,7 +3,7 @@ layout: content
 title:  "[Raspberry Pi] NAS, 나만의 클라우드 만들기"
 date:   2023-05-22 12:45:29 +0900
 categories: RaspberryPi
-pin: true
+pin: false
 ---
 
 
