--- a/_posts/Resume/Xprograming/Java/CodingTest/2022-08-12-Lv1.달리기경주.md
+++ b/_posts/Resume/Xprograming/Java/CodingTest/2022-08-12-Lv1.달리기경주.md
@@ -3,7 +3,7 @@ layout: content
 title:  "[Java] 코딩테스트 문제 풀어보기 1일차"
 date:   2022-08-12 12:45:29 +0900
 categories: Java
-pin: true
+pin: false
 ---
 
 # 코테 중 자바 문법 정리
@@ -69,4 +69,4 @@ class Solution {
 가변 길이인 hash 함수를 사용해서 키 값을 플레이어 이름으로 지정 후,
 키 값 호출시 , 순위 변동을 시켜주는 식으로 코드를 짰다.
 
-추가적으로 for문을 항상 .length 식으로 짰는데 간결하게 calling으로 값을 받았다는 점이 인상 깊으면서 한 편으로 내 부족함이 보였다.
+추가적으로 for문을 항상 .length 식으로 짰는데 간결하게 calling으로 값을 받았다는 점이 인상 깊으면서 한 편으로 내 부족함이 보였다. tlqkf
