--- a/_posts/Resume/last/2024-05-26-동국시스템즈.md
+++ b/_posts/Resume/last/2024-05-26-동국시스템즈.md
@@ -1,6 +1,6 @@
 ---
 layout: content
-title:  "[이력서] 24년 상반기 동국시스템"
+title:  "[이력서] 24년 상반기 동국시스템즈"
 date:   2024-05-26 12:45:29 +0900
 categories: Resume
 pin: false
