--- a/_posts/Resume/last/2024-06-03-케이지이니시스.md
+++ b/_posts/Resume/last/2024-06-03-케이지이니시스.md
@@ -1,7 +1,6 @@
-
 ---
 layout: content
-title:  "[이력서] 24년 상반기 동국시스템즈"
+title:  "[이력서] 24년 상반기 케이지이니시스"
 date:   2024-05-26 12:45:29 +0900
 categories: Resume
 pin: false
