--- a/_posts/Resume/recent/2024-05-16-중앙대학교병원.md
+++ b/_posts/Resume/recent/2024-05-16-중앙대학교병원.md
@@ -333,102 +333,48 @@ Django 기반의 진료 접수 기능을 작게나마 구현해봤습니다.
 
 
 
-📌 RPA 
-블루프리즘을 사용해본 적이 없어서 자세한 방식은 잘 모릅니다. 그래도 의사 선생님이 사용하실 때, 어떤 식으로 사용하고, 동작하는지 만 확인했었습니다. 그래서 블루프리즘의 응용 보다 개인적인 생각으로 만 작성했습니다.
-
-1. 처음 방문해서 진료과 찾을 때
-일하시는 분들이야 매일 오니까 잘 아시겠지만, 원무과에서 결제하고 진료과 찾을 때, 환자 입장에서 약간 불편합니다. 바로 뒤에 진료과 정보가 있는 것도 아니고, 엘레베이터 앞이나 혹은 키오스크 뒤에 설명해주시는 분들한테 여쭤봐야 한다는 점이 있었습니다. 서있는 직원 분들은 불편한 사람들을 위해 존재한다고 생각이 드는데, 결제했을 때, 키오스크에 진료과 위치 정보만 띄어도 그 분들의 일을 줄일 수 있지 않을까 생각합니다.
-
-2. 간호사 확인
-진료 볼 때, 접수처 키오스크에서 접수증 뽑고, 간호사 분들이 항상 확인하고, 어느 병실 앞에 앉아 있으라고 하던데, 물론 이유가 있겠지만, 진료를 기다리면서 주변 상황을 살폈을 때, 일반적으로 간호사 확인은 불필요한 단계 같습니다.
-
-접수처 키오스크 -> 접수(도착 확인), 접수증 발급 -> 간호사 승인 -> 대기자 화면에 출력 확인 -> 진료
-
-3. 진료진행상황 & 수술전검사안내문
-진료진행상황을 간호사분들이 뽑아 주시는데, 항상 펜으로 적어주시면서 설명해주싶니다. 예약 날짜도 자동으로 기입돼서 같이 출력된다던가, 혹은 저와 관련이 없는 황목은 안나오게 하기 만 해도 그 부분 일이 많이 줄 거라 생각합니다. 
-
-앞에서 못 알아 들으시는 분이나 예약 변경?하시는 분이 계시면, 2번과 3번은 상당히 오래 기다리면서, 간호사분들의 시간도 많이 사용하게 됩니다.
-
-4. 특정 과에 의사 선생님 부족
-RPA가 있어도, 특정 과에 의사 선생님의 수가 부족한 거 같습니다. 혈액종양내과는 순환이 안됩니다. 아마도 과 특성상 다들 불안하셔서, 진료 때, 많이 질문하시는 거 같습니다. 그래서 대기하는 인원이 많아 서있는 분들도 많습니다.
-그럼 의사 선생님을 대체할, 진료를 봐줄 매개채가 필요한데, 그건 진단 AI라고 생각은 하지만 제가 AI에 대한 지식이 부족해서,,,
-그나마 가능하다고 느끼는 부분은 ChatGPT 이용하는건데, OpenAI에서 제공하는 튜닝 가능한 API는 아직 3.5라서 정확도가 확연히 낮습니다. 최소한 4 버전은 돼야 가능해 보입니다. 간단하게 종양이 있는 초음파 사진을 주고 분석해달라고 했을 때, 가능한 병명에 대한 진단이 된다는 것을 개인적으로 테스트 해봤습니다.
-
-미리 3.5터보 버전을 기반으로 초안을 개발해 놓고, 4나 4o버전을 제공할 때, 전환하는 건 어떻까 하는 의견입니다.
-
-그리고 개인이 CT나 초음파 사진을 소지하는 건 불가능하다고 알고 있습니다.
-만약에 보안문제가 있을 수 있다고 한다면, 개인정보일텐데, 분석을 시켜야 하니 사진은 어쩔 수 없습니다. 그러나 텍스트로 된 개인정보는 중간에 검증단계 만 제대로 만들면 어느정도 가능할 거라 생각합니다.
+ RPA 블루프리즘을 사용해본 적이 없기도 하고, 자세한 방식은 잘 몰라서,의사 선생님이 사용하실 때, 어떤 식으로 사용하고, 동작하는지 만 확인했었습니다. (*아래 내용은 블루프리즘의 응용과 무관할 수 있습니다.)
+1. 키오스크 진료과 위치 정보일하시는 분들이야 매일 오니까 잘 아시겠지만, 원무과에서 결제하고 진료과 찾을 때, 환자 입장에서 불편합니다. 바로 뒤에 진료과 정보가 있는 것도 아니고, 엘레베이터 앞이나 혹은 키오스크 뒤에 설명해주시는 분들한테 여쭤봐야 한다는 점이 있었습니다. 서있는 직원 분들은 불편한 사람들을 위해 존재한다고 생각이 드는데, 결제했을 때, 키오스크에 진료과 위치 정보만 띄어도 그 분들의 일을 줄일 수 있지 않을까 생각합니다.
+2. 간호사 승인 절차 생략진료 볼 때, 접수처 키오스크에서 접수증 뽑고, 간호사 분들이 항상 확인한 후에, 어느 병실 앞에 앉아 있으라고 하던데, 물론 이유가 있겠지만, 진료를 기다리면서 주변 상황을 살폈을 때, 일반적으로 간호사 확인은 불필요한 단계 같습니다.
+ 접수처 키오스크 -> 접수(도착 확인), 접수증 발급 -> 간호사 승인 -> 대기자 화면에 출력 확인 -> 진료
+3. 진료진행상황 & 수술전검사안내문에 필요한 내용 만진료진행상황을 간호사분들이 뽑아 주시는데, 항상 펜으로 직접 적어주시면서 설명해주싶니다. 예약 날짜도 직접 다 적어주시는데, 자동으로 기입돼서 같이 출력된다던가, 혹은 저와 관련이 없는 항목은 안나오게 하기 만 해도 그 부분 일이 많이 줄 거라 생각합니다. 
+앞에서 못 알아 들으시는 분이나 예약 변경?하시는 분이 계시면, 2번과 3번은 환자도 상당히 오래 기다리면서, 간호사분들의 시간도 많이 사용하게 됩니다.
+4. 특정 과에 의사 선생님 부족RPA가 있어도, 특정 과에 의사 선생님의 수가 부족한 거 같습니다. 혈액종양내과는 순환이 안됩니다. 아마도 과 특성상 다들 불안하셔서, 진료 때, 많이 질문하시는 거 같습니다. 그래서 대기하는 인원이 많아 서있는 분들도 많습니다.그럼 의사 선생님을 대체할, 진료를 봐줄 매개채가 필요하고, 그게 진단 AI라고 생각은 하지만 AI에 개발에 대한 지식이 부족합니다.그나마 응용은 가능합니다. ChatGPT 이용하는건데, OpenAI에서 제공하는 튜닝 가능한 API는 아직 3.5라서 정확도가 확연히 낮습니다. 최소한 4 버전은 돼야 가능해 보입니다. 간단하게 종양이 있는 초음파 사진을 주고 분석해달라고 했을 때, 가능한 병명에 대한 진단이 된다는 것을 개인적으로 테스트 해봤습니다.
+미리 3.5터보 버전을 기반으로 초안을 개발해 놓고, 4나 4o버전을 제공할 때, 전환하는 건 어떨까 하는 의견입니다.
+그리고 개인이 CT나 초음파 사진을 소지하는 건 불가능하다고 알고 있습니다.만약에 보안문제가 있을 수 있다고 한다면, 개인정보일텐데, 분석을 시켜야 하니 사진은 방법이 없습니다. 그러나 텍스트로 된 개인정보는 중간에 검증단계 만 제대로 구현하면 어느정도 가능할 거라 생각합니다.
 
 
-
-- 📌 어플리케이션
-1. 잘 만든 어플리케이션 활용
-어플이 있던데 알려주셨으면, 처음부터 사용했을 거 같습니다. 광고가 부족합니다. 
-진료 예약 시간이라던가, 바코드에 환자 번호가 있어서, 나이 드신 분들도 쉽게 사용할 수 있도록 UI도 잘 만드셨는데, 활용 면이 아쉬운 거 같습니다.
-
-2. 결제 시스템
-시간 맞춰서 진료 받으러 갈 때, 키오스크 앞에 나이 드신 분들이 많으면, 그 과정이 늦던데, 결제를 원무과에서 하는 것도 좋지만 핸드폰 어플에 사용하는 건 어떨까 생각했었습니다. 그러나 이것도 어플에 있는 기능이던데, 이 부분이 심지어 카테고리에 숨겨져 있기도 하고, 자주 활용되지 않을 거 같아 아쉬운 거 같습니다.
+ 어플리케이션 홍보1. 잘 만든 어플리케이션 활용어플이 있던데 알려주셨으면, 처음부터 사용했을 것 같습니다. 홍보가 부족합니다. 진료 예약 시간이라던가, 바코드에 환자 번호가 있어서, 나이 드신 분들도 쉽게 사용할 수 있도록 UI도 잘 만드셨는데, 활용 면이 아쉬운 거 같습니다.
+2. 결제 시스템시간 맞춰서 진료 받으러 갈 때, 키오스크 앞에 나이 드신 분들이 많으면, 그 과정이 늦어지던데, 결제를 원무과에서 하는 것도 좋지만 핸드폰 어플에 사용하는 건 어떨까 생각했었습니다. 
+그러나 이것도 어플에 있는 기능이던데, 이 부분이 심지어 카테고리에 숨겨져 있기도 하고, 자주 활용되지 않을 거 같아 아쉬운 거 같습니다.
 
 
-
-- 📌 개선
-1. null
-감염내과 박정하 교수님한테 진료 볼 때, 접수증에는 구역이 null이었습니다.
-
-2. 어플에 검사결과조회 기능(아이폰)의 아쉬움
-검사결과조회 -> 검사명 url 클릭 시 -> 핸드폰에 기본 설정된 브라우저로 이동
-
-이 부분 제대로 안 나옵니다. 결과가 일단 중앙대학교병원 어플에서 보는 것도 아니고, 클릭 시, 정보가 나오는 부분있고 안 나오는 부분있습니다. 일반적으로 보기 힘듭니다.
-
-3. 
-번외로 의약품사전 기능은 어플 내에서 iframe 태그로 네이버 화면을 띄우는 느낌인 반면에 다른 기능들은 핸드폰에 기본 설정된 브라우저로 이동됩니다. 특히, 본인의 검사 결과 조회는 중요한 기능이라고 생각합니다. 근데 이 부분이 완성도 면에서 만들다 만 것 같습니다.
+ 개선이 필요했던 부분1. null감염내과 박정하 교수님한테 진료 볼 때, 접수증에는 구역이 null이었습니다.
+2. 어플에 검사결과조회 기능(아이폰)의 아쉬움 검사결과조회 -> 검사명 url 클릭 시 -> 핸드폰에 기본 설정된 브라우저에서 실행 특히, 본인의 검사 결과 조회는 중요한 기능이라고 생각합니다. 근데 이 부분이 완성도 면에서 만들다 만 것 같습니다. 이 부분이 결과도 제대로 안 나옵니다.결과가 일단 중앙대학교병원 어플에서 보는 것도 아니고, 클릭 시, 정보가 나오는 부분있고 안 나오는 부분있습니다. 일반적으로 그냥 보기 힘듭니다.
+3. 브라우저 실행번외로 의약품사전 기능은 어플 내에서 네이버 화면을 띄우는 느낌인 반면에, 다른 기능들은 핸드폰에 기본 설정된 브라우저로 이동 후 실행됩니다. 이런 디테일이 2번과 마찬가지로 미완서이라 느꼈습니다.
+ - 어플 내에서 실행 - 핸드폰 기본 브라우저에서 실행
 
 
+ 입원병실 아이디어1. 입원실 보호자 출입증 발급과정 & 디지털 출입증우선, 입원실 갈 때도 지하 응급실?에서 출입증 받고, 올라갈 때, 5층에서 갈아타야 하던데, 이 전반적인 과정 설명이 부족한 것 같아 젊은 저도 한참 헤맸습니다.
+두 번째로, 어플리케이션에서 디지털 출입증을 발급 가능하게 하는 의견입니다.출입증도 발급된 QR이나 바코드를 찍고 들어갔던 거 같은데, 그 부분을 디지털 출입증으로도 발급이 가능하게 한다던가 하는 아이디어가 있습니다. 세션으로 임시값을 서버측에 만들고 -> QR을 발급 -> 그 정보로 일정 기간 동안 만 가능하게 디지털 출입증을 발급
+2. 출입증 보안 무의미
+제가 출입증을 어머니한테 드리고, 앞에서 기다리다가 출입증 없이도 쉽게 들어갔던 경험이 있습니다.혹시 모를 침입자를 대비해, 카운팅이 가능한 방법을 찾아보는 것도 괜찮은 거 같다고 생각했습니다. 예를 들면, 라즈베리파이에 다양한 모듈이 있으니까
+ 티머니의 태그리스 기술이나, 출입증에 전자기 유도관련한 도난방지시스템을 응용한다던가, 요즘에는 다이소에 바코드를 안 찍고 사이에 둬도 바코드가 인식되는 방식도 있던데,
+그런 기술을 구현할 수 있는지 찾아보는 것도 어떨까, 의견 남겨 봅니다.
+ 카운팅 수와 입장 수가 같지 않다면 -> 출입증 찍고 들어오지 않은 침입자 발생 -> 시간정보 저장 -> cctv 캡쳐 -> 입원병실 담당 간호사에게 전송
 
 
-- 📌 입원병실 아이디어
-1. 입원실 보호자 출입증 발급과정 & 사실 무의미
-우선, 입원실 갈 때도 지하 응급실?에서 출입증 받고, 올라갈 때, 5층에서 갈아타야 하던데, 이 전반적인 과정 설명이 부족한 거 같아 젋은 저도 한참 해맸습니다.
-
-두 번째로, 어플리케이션에서 
-세션으로 임시값을 서버측에 만들고 -> QR을 발급해서 -> 그 정보로 일정 기간 동안 만 가능하게 디지털 출입증을 발급한다던가,
-
-혹시 모를 침입자를 대비해, 카운팅이 가능한 방법을 찾아보는 것도 괜찮은 거 같다고 생각했습니다. 예를 들면, 라즈베리파이에 다양한 모듈이 있으니까 티머니의 태그리스나 출입증에 전자기 유도관련한 도난방지시스템을 응용한다던가, 요즘에는 다이소에 바코드를 안 찍고 사이에 둬도 바코드를 인식되던데, 아무튼 그런 기술을 구현할 수 있는지 찾아보는 것도 어떨까,,, 간단한 의견 남겨 봅니다.
-
-카운팅 수와 입장 수가 같지 않다면 -> 출입증 찍고 들어오지 않은 침입자 발생 -> 시간정보 저장 -> cctv 캡쳐 -> 입원병실 담당 간호사에게 전송
-
-왜냐하면 제가 출입증을 어머니한테 드리고, 앞에서 기다리다가 출입증 없이도 쉽게 들어갔던 경험이 있습니다.
+ 장례식장 아이디어저희 친형이랑 장례식 때, 조의금을 받으면서 생각했던 건데,매일 밤 누가 왔었는지 봉투를 하나하나 확인하고 제가 직접 엑셀에 작성했었습니다. 봉투에 시험지 OMR 카드 처럼, 바코드 같은 걸 만들어서, 자동인식되어 가능하게 하면 어떨까 하는 의견입니다.
+ 조의금 봉투에 이름 omr 작성 -> 금액 omr은 상주가 직접 작성 -> 바코드 인식 -> table이나 엑셀에 자동 입력 장례식장 임시 결제 계좌 발급 -> 입금 -> table이나 엑셀에 자동 입력
+ -> 장례식이 끝나면 문서화 -> 상주에게 전송
 
 
-
-- 📌 장례식장 아이디어
-저희 친형이랑 생각했던 건데, 장례식 때, 조의금을 받으면, 매일 밤 누가 왔었는지 봉투를 하나하나 확인하고 제가 직접 엑셀에 작성했었습니다. 봉투에 시험지 OMR 카드 처럼, 바코드 같은 걸 만들어서, 자동인식되어 가능하게 하면 어떨까 의견입니다.
-
-조의금 봉투에 이름 omr 작성 -> 금액 omr은 상주가 직접 입력 -> 바코드 인식 -> table이나 엑셀에 자동 입력 
-장례식장 임시 결제 계좌 발급 -> 입금 -> table이나 엑셀에 자동 입력
-
--> 장례식이 끝나면 문서화 -> 상주에게 전송
-
-
-
-- 📌 마지막으로
-암일 때, 3개월이면 두배 커진다고 알고있습니다. 그런데 제가 가진 종양이 암인지 진단받기 위한 과정이 3개월 정도 걸릴 예정이고, 과정이 길다고 느꼈습니다.
-
-감염내과 -> 혈액 검사 -> 초음파 검사 -> 진료, 뭐가 있네? ->
-혈액종양내과 -> 혈액 검사 -> CT 촬영 -> 진료, 자세한 건 조직 검사를,, ->
-이비인후과 -> 혈액 검사, 소변 검사, x레이 촬영, 심전도 검사 -> 조직 검사 ->
-혈액종양내과 진단
-
-다가오는 6월에 종양 하나를 제거하면서, 조직 검사를 진행할 예정입니다. 
-그런데 만졌을 때, 작은 거 두개가 더 생겨서 금일 점심에 이비인후과 진료할 때, 말씀 드리고 왔습니다.
-이 부분에 대한 아이디어는 없습니다. 미뤄 진다는 거, 의사 선생님 부족이지, 진료 과정이나 시스템 프로세스의 문제라고 생각은 안합니다. 그래도 이 부분은 개발자 선생님들이 직게나마 줄일 수 있다고 생각합니다.
-
-이전에 혈액종양내과에 앉아서 대기하고 있다 보니, 사람들 표정을 봤습니다. 마스크에 가려져 있었지만 그 절망 가득한 눈과 깊은 한숨에,,, 무거운 분위기는 저도 마찬가지로 그 자리에 앉아 있으면서 많은 감정이 교차했던 거 같습니다. 그 환자들한테 쓸데 없는 절차를 줄여서, 진료를 빠르게 받을 수 있도록 해주는게 RPA로서 가장 필요해 보입니다.
-
-아무튼, 이번 공고 준비하면서, 생각했던 쓸모 없어진 아이디어가 아픈 사람한테 쓸모 있었으면 하는 바렘으로 이메일로 한 번 보내봤습니다. 중앙대학교광명병원 부지가 저희 집안 예전 묘자리라서, 그만큼 집안 친척이 많이 살고 있어요. 저희 가족 진료 잘 부탁드립니다.
-
-다들 몸 아프지 마시고, 좋은 하루되세요.
-
+ 마지막으로암일 때, 3개월이면 두배 커진다고 알고있습니다. 그런데 제가 가진 종양이 암인지 진단받기 위한 과정이 3개월 정도 걸릴 예정이고, 과정이 길다고 느꼈습니다.
+ 감염내과 -> 혈액 검사 -> 초음파 검사 -> 진료, 뭐가 있네요? -> 혈액종양내과 -> 혈액 검사 -> CT 촬영 -> 진료, 자세한 건 조직 검사를 해봐야해요 -> 이비인후과 -> 혈액 검사, 소변 검사, x레이 촬영, 심전도 검사 -> 조직 검사 -> 혈액종양내과 진단
+다가오는 6월에 종양 하나를 제거하면서, 조직 검사를 진행할 예정입니다. 그런데 만졌을 때, 작은 거 두개가 더 생겨서 금일 점심에 이비인후과 진료할 때, 말씀 드리고 왔습니다.이 부분에 대한 아이디어는 없습니다. 미뤄 진다는 거, 의사 선생님 부족이지, 진료 과정이나 시스템 프로세스의 문제라고 생각이 안듭니다. 그래도 이 부분은 개발자 선생님들이 작게나마 줄일 수 있다고는 생각합니다.
+이전에 혈액종양내과에 앉아서 대기하고 있다 보니, 사람들 표정을 봤습니다. 마스크에 가려져 있었지만 그 절망 가득한 눈과 깊은 한숨에 그 무거운 분위기는 저도 마찬가지로 그 자리에 앉아 있으면서 많은 감정이 교차했던 거 같습니다. 거기 있는 환자들한테 쓸데 없는 절차를 줄여서, 진료를 빠르게 받을 수 있도록 해주는게 이번 공고를 준비하면서, RPA로 가장 필요해 보인다 느꼈습니다.
+아무튼, 이번에 떨어지면서 쓸모 없어진 아이디어가 아픈 사람한테 쓸모 있었으면 하는 바램으로 이메일로 한 번 보내봅니다.중앙대학교광명병원 부지가 저희 집안 예전 묘자리라서, 그만큼 집안 친척이 많이 살고 있습니다. 저희 가족 진료 잘 부탁드립니다.
+다들 몸 아프지 마시고, 좋은 하루 되십쇼.
 
 
 
